--- a/source/文档结构样式/标题.md
+++ b/source/文档结构样式/标题.md
@@ -6,8 +6,6 @@
 
 技术文档中使用标题最多不超过四级。标题从一级开始递增使用，禁止跳级使用。例如：一级标题下面不能直接使用三级标题；二级标题下面不能直接使用四级标题。
 
- 
-
 ●   一级标题：文章标题
 
 ●   二级标题：文章正文部分的标题
@@ -16,25 +14,17 @@
 
 ●   四级标题：三级标题下面某一方面的小标题
 
- 
-
 下图为在 Markdown 技术文档中使用标题的示例，左侧是编辑文字，右侧是预览效果：
 
- 
-
-<img src="1.png" alt="img" style="zoom:50%;" />
-
- 
+<img src="标题层级.png" alt="img" style="zoom:50%;" />
 
 为避免出现过于复杂的章节，若无特殊需要，不建议使用四级标题。如果三级标题下有并列性的内容，建议使用列表 (list) 代替四级标题。如下图中，若内容 A、B、C 的篇幅不长，则右侧的标题样式比左侧的标题样式要好。
 
-<img src="2.png" alt="img" style="zoom:50%;" />
+<img src="标题划分.png" alt="img" style="zoom:50%;" />
 
 ### 标题的描述
 
 技术文档中的标题包括但不限于以下几种描述：
-
- 
 
 ●   名词词组，如“概述”、“背景”、“原理”
 
@@ -46,11 +36,7 @@
 
 ●   介词+定语+主题词，如“对机器配置的要求”
 
- 
-
 标题描述的设计并无严格的模板，只要遵循以下几个原则即可：
-
- 
 
 ●   标题能够概括反映本章节的中心内容
 
@@ -63,8 +49,6 @@
 ### 使用标题的注意事项
 
 技术文档中使用标题主要有以下几个注意事项：
-
- 
 
 ●   下级标题禁止重复上一级标题的内容
 
