fix list format

--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -24,11 +24,11 @@
 
 正确使用 Tab 和空格：
 
-●   [缩进与对齐——正确地使用Tab和空格](https://blog.csdn.net/tonywearme/article/details/7061530)
+- [缩进与对齐——正确地使用Tab和空格](https://blog.csdn.net/tonywearme/article/details/7061530)
 
-●   [使用tab, 还是空格, 小小编程习惯却有巨大的差别](https://juejin.im/post/59e83382f265da4307026141)
+- [使用tab, 还是空格, 小小编程习惯却有巨大的差别](https://juejin.im/post/59e83382f265da4307026141)
 
-●   [写代码时，缩进使用tab 还是空格？ - 知乎](https://www.zhihu.com/question/19960028)
+- [写代码时，缩进使用tab 还是空格？ - 知乎](https://www.zhihu.com/question/19960028)
 
 列表：
 
