--- a/source/文档内容元素/注意和说明.md
+++ b/source/文档内容元素/注意和说明.md
@@ -2,10 +2,10 @@
 
 技术文档中使用注意和说明应遵循以下规范。
 
-●   根据提示内容的级别和分类使用不同的文字描述。例如，分类可以包括“危险”、“警告”、“小心”、“注意”、“说明”、“窍门”、“举例”等。
+- 根据提示内容的级别和分类使用不同的文字描述。例如，分类可以包括“危险”、“警告”、“小心”、“注意”、“说明”、“窍门”、“举例”等。
 
-●   注意和说明中不能包含表格和图形。
+- 注意和说明中不能包含表格和图形。
 
-●   注意和说明的内容不能过长，建议不要超过 4 行。 
+- 注意和说明的内容不能过长，建议不要超过 4 行。 
 
-●   建议同一页不超过两段注意或说明。
+- 建议同一页不超过两段注意或说明。
