--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -8,9 +8,9 @@
 
 句号表示一个句子的意思已经完整，技术文档中应善用句号切分语意，帮助用户理清逻辑。
 
-●   【错误示例】本系统主要给中小渠道和大CP提供网游定制支付SDK，解决了部分中小渠道有资源进行游戏推广和分发但没有技术条件去开发自己的支付系统，导致收费难等诸多问题，通过使用易接提供的渠道管理系统，可在此后台配置支付参数实现计费能力、子渠道管理、查看收益及用户数据进行用户行为分析等。
+- 【错误示例】本系统主要给中小渠道和大CP提供网游定制支付SDK，解决了部分中小渠道有资源进行游戏推广和分发但没有技术条件去开发自己的支付系统，导致收费难等诸多问题，通过使用易接提供的渠道管理系统，可在此后台配置支付参数实现计费能力、子渠道管理、查看收益及用户数据进行用户行为分析等。
 
-●   【正确示例】本系统主要给中小渠道和大 CP 提供网游定制支付 SDK，解决了部分中小渠道有资源进行游戏推广和分发但没有技术条件去开发自己的支付系统、导致收费难等诸多问题。通过使用易接提供的渠道管理系统，可在此后台配置支付参数实现计费能力、子渠道管理、查看收益及用户数据进行用户行为分析等。
+- 【正确示例】本系统主要给中小渠道和大 CP 提供网游定制支付 SDK，解决了部分中小渠道有资源进行游戏推广和分发但没有技术条件去开发自己的支付系统、导致收费难等诸多问题。通过使用易接提供的渠道管理系统，可在此后台配置支付参数实现计费能力、子渠道管理、查看收益及用户数据进行用户行为分析等。
 
 ### 逗号
 
@@ -18,9 +18,9 @@
 
 逗号虽然没有特殊、专门的意义，使用也最普遍，但是不能滥用。技术文档中不要出现“一‘逗’到底”的错误，即整个段落除了段落结尾外，全部停顿都使用逗号。
 
-●   【错误示例】帐务计费中心主要负责话单处理和帐务处理，帐务计费中心同计费网关之间有一个话单接口，用于帐务计费中心取用户话单，话单文件采用 *.TXT 的形式。
+- 【错误示例】帐务计费中心主要负责话单处理和帐务处理，帐务计费中心同计费网关之间有一个话单接口，用于帐务计费中心取用户话单，话单文件采用 *.TXT 的形式。
 
-●   【正确示例】帐务计费中心主要负责话单处理和帐务处理。帐务计费中心同计费网关之间有一个话单接口，用于帐务计费中心取用户话单。话单文件采用 *.TXT 的形式。
+- 【正确示例】帐务计费中心主要负责话单处理和帐务处理。帐务计费中心同计费网关之间有一个话单接口，用于帐务计费中心取用户话单。话单文件采用 *.TXT 的形式。
 
 ### 顿号
 
@@ -28,9 +28,9 @@
 
 英文中没有顿号，常用逗号来表示并列词语的停顿。因此对于英汉技术翻译者而言，更应该注意顿号的使用场景。
 
-●   【错误示例】母板插框，风扇框，交流电源，直流电源等在出厂前已安装完毕。
+- 【错误示例】母板插框，风扇框，交流电源，直流电源等在出厂前已安装完毕。
 
-●   【正确示例】母板插框、风扇框、交流电源、直流电源等在出厂前已安装完毕。
+- 【正确示例】母板插框、风扇框、交流电源、直流电源等在出厂前已安装完毕。
 
 ### 分号
 
@@ -40,21 +40,21 @@
 
 【例一】转换的范围包括：
 
-●   图形元素转换为接收终端可处理的格式；
+- 图形元素转换为接收终端可处理的格式；
 
-●   音频格式转换为接收终端可处理的格式；
+- 音频格式转换为接收终端可处理的格式；
 
-●   文本编码格式转换为接收终端可处理的格式。
+- 文本编码格式转换为接收终端可处理的格式。
 
 【例二】具体来讲，分为如下几种情况：
 
 (1) XXXXXXXXXXXXXX。
 
-●   XXXXXX；
+- XXXXXX；
 
-●   XXXXXXXX；
+- XXXXXXXX；
 
-●   XXXXXXXX。
+- XXXXXXXX。
 
 (2) XXXXXXXXX。
 
@@ -68,17 +68,17 @@
 
 【示例】设备分为以下几个部分：
 
-●   机柜
+- 机柜
 
-●   单板
+- 单板
 
-●   外接设备
+- 外接设备
 
 建议不要连续使用冒号。
 
-●   【错误示例】计费策略：表示计费：1，表示不计费：2。
+- 【错误示例】计费策略：表示计费：1，表示不计费：2。
 
-●   【正确示例】计费策略：1 表示计费，2 表示不计费。
+- 【正确示例】计费策略：1 表示计费，2 表示不计费。
 
 ### 引号
 
@@ -86,15 +86,15 @@
 
 本节只讨论弯引号使用的一些规范，下文中使用的“引号”含义即为“弯引号”含义。
 
-●   引号里面还要用引号时，外面一层用双引号，里面一层用单引号。
+- 引号里面还要用引号时，外面一层用双引号，里面一层用单引号。
 
-●   技术文档的正文中若涉及特定参数名称、字段名、界面字段、引用文档的节选等，建议使用引号。
+- 技术文档的正文中若涉及特定参数名称、字段名、界面字段、引用文档的节选等，建议使用引号。
 
-○   【正确示例一】在参数表中规定了 TMN 接口与支持这些接口的物理构件的关系，其中“M”表示必备，“O”表示可选。
+    - 【正确示例一】在参数表中规定了 TMN 接口与支持这些接口的物理构件的关系，其中“M”表示必备，“O”表示可选。
 
-○   【正确示例二】具体命令请参见《Quidway S8016 路由交换机安装手册》中“1.2.1 安装步骤”的内容。
+    - 【正确示例二】具体命令请参见《Quidway S8016 路由交换机安装手册》中“1.2.1 安装步骤”的内容。
 
-○   【正确示例三】请设置如下三个参数：“Card Number”、“Password”、“Discount Rate”。
+    - 【正确示例三】请设置如下三个参数：“Card Number”、“Password”、“Discount Rate”。
 
 ### 括号
 
@@ -108,9 +108,9 @@
 
 在技术文档或产品手册中括号有以下几种特定用法。
 
-●   方括号“[ ]”表示窗口名、菜单名等，如“弹出[新建用户]窗口”、“[文件/新建/文件夹]多级菜单”；
+- 方括号“[ ]”表示窗口名、菜单名等，如“弹出[新建用户]窗口”、“[文件/新建/文件夹]多级菜单”；
 
-●   带尖括号“< >”表示按钮名、键名，如“单击<确定>按钮”、“<Tab> 表示制表键”。
+- 带尖括号“< >”表示按钮名、键名，如“单击<确定>按钮”、“<Tab> 表示制表键”。
 
 ### 书名号
 
@@ -120,9 +120,9 @@
 
 书名号中的文档名称必须使用全称，不能使用简称。
 
-●   【错误示例】具体操作请参见《S8016 安装手册》 
+- 【错误示例】具体操作请参见《S8016 安装手册》 
 
-●   【正确示例】具体操作请参见《Quidway S8016 路由交换机安装手册》
+- 【正确示例】具体操作请参见《Quidway S8016 路由交换机安装手册》
 
 ### 连接号
 
@@ -146,13 +146,13 @@
 
 使用破折号要注意以下几点。
 
-●   破折号前后不空格。
+- 破折号前后不空格。
 
-○   【错误示例】一种新体制 —— 光同步传送网应运而生。
+    - 【错误示例】一种新体制 —— 光同步传送网应运而生。
 
-○   【正确示例】一种新体制——光同步传送网应运而生。
+    - 【正确示例】一种新体制——光同步传送网应运而生。
 
-●   破折号与连接号中的长横都是占两格的长横，符号形式相同。但两者含义不同，破折号用来解释、说明前文；连接号是把前后相关词语连成一个整体。
+- 破折号与连接号中的长横都是占两格的长横，符号形式相同。但两者含义不同，破折号用来解释、说明前文；连接号是把前后相关词语连成一个整体。
 
 ### 省略号
 
@@ -160,21 +160,21 @@
 
 省略号主要在以下两种场景中使用。
 
-●   引文的省略，用省略号标明。 
+- 引文的省略，用省略号标明。 
 
-○   【示例】中文写作规范中要求：“句号常用于陈述句末尾的停顿。在产品资料中常用于简单句和复合句的结尾，表示句子意思已完整......”
+    - 【示例】中文写作规范中要求：“句号常用于陈述句末尾的停顿。在产品资料中常用于简单句和复合句的结尾，表示句子意思已完整......”
 
-●   列举的省略，用省略号标明。
+- 列举的省略，用省略号标明。
 
-○   【示例】在广州的花市上，牡丹、菊花、杜鹃、梅花、水仙、山茶...... 春秋冬三季的鲜花都挤在一起了。
+    - 【示例】在广州的花市上，牡丹、菊花、杜鹃、梅花、水仙、山茶...... 春秋冬三季的鲜花都挤在一起了。
 
 ### 感叹号
 
 技术文档中使用感叹号应遵循以下规范。
 
-●   尽量使用平静的语气叙述，避免使用感叹号。
+- 尽量使用平静的语气叙述，避免使用感叹号。
 
-●   禁止多个感叹号连用，比如“ ！！”和“!!!”。
+- 禁止多个感叹号连用，比如“ ！！”和“!!!”。
 
 ### 斜杠与反斜杠
 
@@ -182,14 +182,14 @@
 
 斜杠有如下几种用法。
 
-●   表示除法，如 120/60 = 2
+- 表示除法，如 120/60 = 2
 
-●   表示单位（除法的变形），如 60 km/h
+- 表示单位（除法的变形），如 60 km/h
 
-●   表示并列，如他/她
+- 表示并列，如他/她
 
 斜杠的两旁不建议加空格。
 
-●   【错误示例】do / ignore 规则
+- 【错误示例】do / ignore 规则
 
-●   【正确示例】do/ignore 规则
+- 【正确示例】do/ignore 规则
