--- a/source/语言风格/客观礼貌.md
+++ b/source/语言风格/客观礼貌.md
@@ -2,8 +2,8 @@
 
 技术文档中应保持客观礼貌的语气，这样最容易拉近与读者的距离。具体要求有： 
 
-●   应该客观地传达技术信息，而不是在推销产品，否则容易引起读者的反感。
+- 应该客观地传达技术信息，而不是在推销产品，否则容易引起读者的反感。
 
-●   保持一种友好礼貌的语气，不能显得强硬粗鲁、咄咄逼人。
+- 保持一种友好礼貌的语气，不能显得强硬粗鲁、咄咄逼人。
 
-●   不要穿插太多玩笑，让文档风格变得过分轻浮搞笑。偶尔滑稽一次是可取的，这样能适当展现作者或组织的个性，使人印象深刻。但必须记住，技术文档的首要目的是向读者传达技术信息，不能为了追求轻松愉快的文档风格而使读者不明所以。
+- 不要穿插太多玩笑，让文档风格变得过分轻浮搞笑。偶尔滑稽一次是可取的，这样能适当展现作者或组织的个性，使人印象深刻。但必须记住，技术文档的首要目的是向读者传达技术信息，不能为了追求轻松愉快的文档风格而使读者不明所以。
