--- a/source/拼写与语法/文档质量检查工具.md
+++ b/source/拼写与语法/文档质量检查工具.md
@@ -2,8 +2,8 @@
 
 一名成熟的文档工程师应该配置自己的文档编辑器，保证其能对文档自动进行拼写和语法检查。推荐以下几种对文档自动进行质量检查的工具。
 
-●   LanguageTool
+- LanguageTool
 
-●   Grammarly
+- Grammarly
 
-●   Code Spell Checker（VS Code 插件）
+- Code Spell Checker（VS Code 插件）
