--- a/source/文档内容元素/图形和图片.md
+++ b/source/文档内容元素/图形和图片.md
@@ -2,14 +2,14 @@
 
 技术文档中插入图形与图片应遵循以下规范。
 
-●   必须使用清晰可辨的图形图片。
+- 必须使用清晰可辨的图形图片。
 
-●   中文文档里图形图片上的文字建议都用中文，如果原图文字是其他语言，应该先做好图片本地化工作。
+- 中文文档里图形图片上的文字建议都用中文，如果原图文字是其他语言，应该先做好图片本地化工作。
 
-●   同一文档内图形图片上的中文应该统一字体（如“宋体”），英文和数字也要统一字体（如“Arial”）。
+- 同一文档内图形图片上的中文应该统一字体（如“宋体”），英文和数字也要统一字体（如“Arial”）。
 
-●   图形图片中避免出现大段文字，描述性语言建议放到图外，用编号替代。
+- 图形图片中避免出现大段文字，描述性语言建议放到图外，用编号替代。
 
-●   图形图片中包含缩略语时，需要在图说明中对缩略语进行解释。
+- 图形图片中包含缩略语时，需要在图说明中对缩略语进行解释。
 
-●   图说明和图尽量保证在同一页中显示。
+- 图说明和图尽量保证在同一页中显示。
