--- a/source/文档内容元素/空白符号.md
+++ b/source/文档内容元素/空白符号.md
@@ -6,9 +6,9 @@
 
 技术文档中使用空白符号应遵循以下规范。
 
-| 空格 | ●   禁止使用全角空格  ●     中文字符（包括汉字和中文标点符号）和中文字符之间禁止空半角空格  ●   对于英文字符和阿拉伯数字，应使用半角空格包围，以下情况例外：  ○   位于句首时，左边空格省略  ○   其右侧为半角标点或全角标点时，右边空格省略  ●   除表示缩进、列表级别、代码块中固有空格外，禁止连续出现两个及以上的半角空格  ●   不建议使用 Tab（制表符）替换空格 |
+| 空格 | - 禁止使用全角空格  -   中文字符（包括汉字和中文标点符号）和中文字符之间禁止空半角空格  - 对于英文字符和阿拉伯数字，应使用半角空格包围，以下情况例外：      - 位于句首时，左边空格省略      - 其右侧为半角标点或全角标点时，右边空格省略  - 除表示缩进、列表级别、代码块中固有空格外，禁止连续出现两个及以上的半角空格  - 不建议使用 Tab（制表符）替换空格 |
 | ---- | ------------------------------------------------------------ |
-| 空行 | ●   不同段落应使用一个空行隔开  ●   不同排版格式之间使用一个空行隔开，如标题后的正文，正文中的代码块等  ●   禁止连续出现两个及以上的空行 |
+| 空行 | - 不同段落应使用一个空行隔开  - 不同排版格式之间使用一个空行隔开，如标题后的正文，正文中的代码块等  - 禁止连续出现两个及以上的空行 |
 | 其他 | 行宽：相同排版格式内保持一致即可，可自由在 80、120 字符中选择，原则上不超过 160 字符宽 |
 
 ### Tab 和空格的使用
@@ -17,8 +17,8 @@
 
 因此建议：
 
-●   使用空格键而不用 Tab 键进行缩进或对齐
+- 使用空格键而不用 Tab 键进行缩进或对齐
 
-●   使用 Tab 键缩进是可以接受的，但千万不要混用 Tab 和空格进行缩进
+- 使用 Tab 键缩进是可以接受的，但千万不要混用 Tab 和空格进行缩进
 
-●   在 Visual Studio Code 等编辑器里统一设置一个 Tab 等于四个半角空格
+- 在 Visual Studio Code 等编辑器里统一设置一个 Tab 等于四个半角空格
