--- a/source/文档内容元素/缩略语.md
+++ b/source/文档内容元素/缩略语.md
@@ -12,22 +12,22 @@
 
 英语缩略语数量巨大、种类繁多，出现在中文技术文档中的主要有三种：首字母缩略词 (acronym)、字母词 (initialism) 和缩写词 (shortened word) 。三者的区别是：
 
-●   首字母缩略词：由每个词的首字母组成，以词的形式发音
+- 首字母缩略词：由每个词的首字母组成，以词的形式发音
 
-○   【示例】NATO 代表 North Atlantic Treaty Organization
+    - 【示例】NATO 代表 North Atlantic Treaty Organization
 
-●   字母词：也是由每个词的首字母组成，但按字母逐字发音
+- 字母词：也是由每个词的首字母组成，但按字母逐字发音
 
-○   【示例】FBI 代表 Federal Bureau of Investigation
+    - 【示例】FBI 代表 Federal Bureau of Investigation
 
-●   缩写词：由较长的中文语词缩短省略而成的语词
+- 缩写词：由较长的中文语词缩短省略而成的语词
 
-○   【示例】App 代表 Application；demo 代表 demonstration
+    - 【示例】App 代表 Application；demo 代表 demonstration
 
 在技术文档中使用英语缩略语应遵循以下规范。
 
-●   不建议在标题中解释英文缩略语，以免造成标题冗长
+- 不建议在标题中解释英文缩略语，以免造成标题冗长
 
-●   建议在正文中第一次出现缩略语的地方解释其完整含义
+- 建议在正文中第一次出现缩略语的地方解释其完整含义
 
 某词用缩略语进行代称时，必须在该词第一次出现时说明情况，提示读者下文中将以缩略语的形式称呼该词
