--- a/source/文档结构样式/段落.md
+++ b/source/文档结构样式/段落.md
@@ -2,16 +2,16 @@
 
 段落是正文部分的基本构成单元之一，由多个句子组成。段落写作要求如下：
 
-●   一个段落只能有一个主题，或一个中心句子。
+- 一个段落只能有一个主题，或一个中心句子。
 
-●   段落的中心句子建议放在段首，对全段内容进行概述。后面陈述的句子为核心句服务。
+- 段落的中心句子建议放在段首，对全段内容进行概述。后面陈述的句子为核心句服务。
 
-●   一个段落的长度不能超过 7 行，最佳段落长度小于等于 4 行。
+- 一个段落的长度不能超过 7 行，最佳段落长度小于等于 4 行。
 
-●   段落之间使用一个空行隔开。
+- 段落之间使用一个空行隔开。
 
-●   段落的句子语气应该使用陈述和肯定语气，避免使用感叹语气。
+- 段落的句子语气应该使用陈述和肯定语气，避免使用感叹语气。
 
-●   技术文档的段落开头不建议留出空白字符。
+- 技术文档的段落开头不建议留出空白字符。
 
-●   对于技术描述类主题，应考虑先图表，后句子的原则，不要单一的使用段落来陈述主题。
+- 对于技术描述类主题，应考虑先图表，后句子的原则，不要单一的使用段落来陈述主题。
