--- a/source/语言风格/简洁清晰.md
+++ b/source/语言风格/简洁清晰.md
@@ -2,10 +2,10 @@
 
 技术文档中应使用精练的语言。建议将文档中所有对表达意思没有明显作用的字、词、句删去，在不影响表达效果的前提下把文案长度减到最短。具体要求有：
 
-●   禁止啰嗦冗长
+- 禁止啰嗦冗长
 
-●   禁止逻辑混乱
+- 禁止逻辑混乱
 
-●   同一文档中勿重复表达同一事物
+- 同一文档中勿重复表达同一事物
 
-●   **多用主动时态，尤其要阐述清楚主语和宾语**
+- **多用主动时态，尤其要阐述清楚主语和宾语**
