--- a/source/文档内容元素/列表.md
+++ b/source/文档内容元素/列表.md
@@ -24,11 +24,9 @@
 
 解决办法：
 
-\1. 编辑数据源文件。
-
-\2. 手动创建所有的表。
-
-\3. 设置参数跳过检查。
+1. 编辑数据源文件。
+2. 手动创建所有的表。
+3. 设置参数跳过检查。
 
 有序列表的使用场景较少。当列表项的内容是以下几种时，应该使用有序列表。
 
@@ -46,10 +44,10 @@
 
 | 使用列表的规范                                               | 错误案例                                                     | 正确案例                                                     |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 1.  并列列表项中建议使用相似的句子结构。                     | 在公园中请遵守以下规则：     - 将垃圾投入指定的垃圾桶。  - 巨大噪音会吓坏动物。  - 应该站在黄色的标记线区域。  - 保持公园干净，人人有责。 | 在公园中请遵守以下规则：     - 将垃圾投入指定的垃圾桶。  - 不要发出巨大噪音。  - 站在黄线区域内。  - 尽量保持公园清洁。 |
-| 2. 每一项的长度要尽量接近。                                  | 请带上以下物品参加露营：     - 睡袋  - 去瀑布徒步旅行时要用到的洗浴套件  - 防晒霜  - 防水夹克应对可能的雨天。我们可能会遇到强烈的暴风雨 | 请带上以下物品参加露营：     - 睡袋  - 洗浴套件  - 防晒霜  - 防水夹克 |
-| 3. 避免在每一项开头重复相同的词语。                          | 如何挑选菠萝：     - 用闻的。它闻起来要甜。  - 用按的。它应该按下去结实但柔软。  - 用看的。它最好是金黄色。 | 如何挑选菠萝：     - 闻。它闻起来要甜。  - 按。按下去应该结实但柔软。  - 看。最好是金黄色。 |
-| 4. 使用清晰的、描述性的句子或短语来引出列表。                | 不列颠哥伦比亚省的假期：     - 徒步旅行  - 艺术博物馆  - 在湖上划独木舟 | 我们在不列颠哥伦比亚省的假期行程包括：     - 上山徒步旅行  - 参观艺术博物馆  - 在湖上划独木舟 |
+| 1. 并列列表项中建议使用相似的句子结构。                     | 在公园中请遵守以下规则：  <br>   - 将垃圾投入指定的垃圾桶。 <br> - 巨大噪音会吓坏动物。 <br> - 应该站在黄色的标记线区域。 <br> - 保持公园干净，人人有责。 | 在公园中请遵守以下规则：  <br>   - 将垃圾投入指定的垃圾桶。 <br> - 不要发出巨大噪音。 <br> - 站在黄线区域内。 <br> - 尽量保持公园清洁。 |
+| 2. 每一项的长度要尽量接近。                                  | 请带上以下物品参加露营：  <br>   - 睡袋 <br> - 去瀑布徒步旅行时要用到的洗浴套件 <br> - 防晒霜 <br> - 防水夹克应对可能的雨天。我们可能会遇到强烈的暴风雨 | 请带上以下物品参加露营：  <br>   - 睡袋 <br> - 洗浴套件 <br> - 防晒霜 <br> - 防水夹克 |
+| 3. 避免在每一项开头重复相同的词语。                          | 如何挑选菠萝：   <br>  - 用闻的。它闻起来要甜。 <br> - 用按的。它应该按下去结实但柔软。 <br> - 用看的。它最好是金黄色。 | 如何挑选菠萝：  <br>   - 闻。它闻起来要甜。 <br> - 按。按下去应该结实但柔软。 <br> - 看。最好是金黄色。 |
+| 4. 使用清晰的、描述性的句子或短语来引出列表。                | 不列颠哥伦比亚省的假期：  <br>   - 徒步旅行 <br> - 艺术博物馆 <br> - 在湖上划独木舟 | 我们在不列颠哥伦比亚省的假期行程包括：  <br>   - 上山徒步旅行 <br> - 参观艺术博物馆 <br> - 在湖上划独木舟 |
 | 5. 并列列表项中保持标点符号一致。     若列表项是句子，那么每一项建议以句号结尾；     若列表项是词组，则不建议以任何标点结尾。 | 无                                                           | 无                                                           |
 | 6. 不要滥用无序列表，否则会导致它们失去应有的效果。          | 无                                                           | 无                                                           |
 | 7. 避免嵌套使用列表，这样通常会显得冗长复杂。     如果一定要表现多层级的列表，建议最多不超过 3 级，且每一级都要用不同样式的小圆点。 | 无                                                           | 无                                                           |
