change image names

--- a/source/文档结构样式/标题.md
+++ b/source/文档结构样式/标题.md
@@ -16,11 +16,11 @@
 
 下图为在 Markdown 技术文档中使用标题的示例，左侧是编辑文字，右侧是预览效果：
 
-![标题层级](../media/title-1.png)
+![标题层级](../media/heading-levels.png)
 
 为避免出现过于复杂的章节，若无特殊需要，不建议使用四级标题。如果三级标题下有并列性的内容，建议使用列表 (list) 代替四级标题。如下图中，若内容 A、B、C 的篇幅不长，则右侧的标题样式比左侧的标题样式要好。
 
-![标题划分](../media/title-2.png)
+![标题划分](../media/headings-or-lists.png)
 
 ### 标题的描述
 
