update part of "标点符号"

--- a/source/标点符号/中英文混排格式.md
+++ b/source/标点符号/中英文混排格式.md
@@ -1,6 +1,15 @@
 ## 中英文混排格式
 
-中文技术文档中不仅会出现中文标点，也可能出现英文标点，因此在中英文混排时**应着重注意中英文标点的使用**。
+中文技术文档中不仅会出现全角形式的中文标点，也可能出现半角形式的英文标点，因此在中英文混排时应着重注意中英文标点符号的使用。
+
+### 一般原则
+
+中文技术文档**以中文标点符号为主**，以英文标点符号为辅。具体建议规范如下。
+
+- 中文句子内夹用英文单词或词组时，句末均以中文标点符号结尾。夹用的英文单词或词组可不用引号标示。
+- 中文句子内夹用英文句子时，**夹用的英文句子内使用英文标点，用中文引号包裹引用**，中文句子的句末**均以中文标点符号结尾**。
+
+### 括号
 
 中英文混排时使用标点符号建议遵循以下规范。
 
@@ -15,11 +24,6 @@
 
     - 【错误示例】斜杠 (slash 或 forward slash) 和反斜杠 (backslash) 是两种符号。
     - 【正确示例】斜杠（slash 或 forward slash）和反斜杠 (backslash) 是两种符号。
-
-- **全角标点与英文或数字之间不加空格。**
-
-    - 【错误示例】原因是 DM 需要保存同步的 binlog position 。
-    - 【正确示例】原因是 DM 需要保存同步的 binlog position。
 
 - 如果遇到完整的英文句子，则该句首字母大写，句中使用英文半角标点。
 
