--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -33,6 +33,11 @@
 - 《出版物上数字用法》GB/T 15835—2011
 - 《出版物上数字用法的规定》GB/T 15835—1995
 
+标点符号：
+
+- 《标点符号用法》GB/T 15834—2011
+- 《夹用英文的中文文本的标点符号用法（草案）》
+
 列表：
 
 [写给初学者的 Markdown 教程](https://jdhao.github.io/2018/09/21/markdown_tutorial_for_beginners/)
