--- a/source/文档结构样式/段落.md
+++ b/source/文档结构样式/段落.md
@@ -6,7 +6,7 @@
 - 段落的中心句子建议放在段首，对全段内容进行概述。后面陈述的句子为核心句服务。
 - 一个段落的长度建议在 50～200 字之间，尽量不要超过 250 字。（Word 里统计字数）
 - 一个段落里避免只有一个句子。如果句子很长，要**避免“一逗到底”**的情况，合理断句。
-- 段落之间使用一个空行隔开。
 - 段落的句子语气应该使用陈述和肯定语气，避免使用感叹语气。
 - 技术文档的段落开头不建议缩进，顶格开始即可。
 - 对于技术描述类主题，应考虑先图表，后句子的原则，不要单一地使用段落来陈述主题。
+- 段落样式渲染之后，一般建议段前 1.5 倍行距。
