Add a new guideline about adding external link hint

--- a/source/拼写与语法/语法.md
+++ b/source/拼写与语法/语法.md
@@ -40,11 +40,11 @@
 
 ### 成分多余
 
-【示例一】根据官方建议，目前稳定版本的 HAProxy 为稳定版 [2.0 特性](https://www.haproxy.com/blog/haproxy-2-0-and-beyond/)。
+【示例一】根据官方建议，目前稳定版本的 HAProxy 为稳定版 [2.0 特性](https://www.haproxy.com/blog/haproxy-2-0-and-beyond/ "点击前往外部站点")。
 
 【解释】官方目前建议使用 HAProxy 稳定版本 2.0，2.0 特性可以参考此链接。
 
-【建议】官方目前建议使用 [HAProxy 稳定版本 2.0](https://www.haproxy.com/blog/haproxy-2-0-and-beyond/)。
+【建议】官方目前建议使用 [HAProxy 稳定版本 2.0](https://www.haproxy.com/blog/haproxy-2-0-and-beyond/ "点击前往外部站点")。
 
 ### 句式杂糅
 
