--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -6,7 +6,7 @@
 >
 > - 本指南只提供参考规范，不提供权威标准。一些规范在业界并无定论，有争议的点作者会以建议形式给出。
 > - 本指南欢迎所有业界同仁们贡献、讨论、改编。
-> - 本指南保持更新，欢迎任何人提出改进意见，如发现有错误或遗漏的点，请提 [Issue](https://github.com/yikeke/zh-style-guide/issues/new)。
+> - 本指南保持更新，欢迎任何人提出改进意见，如发现有错误或遗漏的点，请提 [Issue](https://github.com/yikeke/zh-style-guide/issues/new "点击前往 GitHub")。
 
 希望本指南的出现能为日后业界标准的建立贡献一点力量。
 
