--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -28,7 +28,7 @@
 
 ## 用词说明
 
-本指南使用的表示“要求”的全部关键词已在下表第二列列出，具体释义请参见 [RFC2119](https://tools.ietf.org/html/rfc2119) 对相应词语做出的相关规定：
+本指南使用的表示“要求”的全部关键词已在下表第二列列出，具体释义请参见 [RFC2119](https://tools.ietf.org/html/rfc2119 "点击前往外部站点") 对相应词语做出的相关规定：
 
 | RFC2119 中定义的关键词     | 对应的中文关键词            | 释义说明                                                     |
 | -------------------------- | --------------------------- | ------------------------------------------------------------ |
