Revert "Add a new guideline about adding external link hint"
This reverts commit 6d0f6fc8eaa902d05f568763a68e9a0bd733cf1d.

--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -6,7 +6,7 @@
 >
 > - 本指南只提供参考规范，不提供权威标准。一些规范在业界并无定论，有争议的点作者会以建议形式给出。
 > - 本指南欢迎所有业界同仁们贡献、讨论、改编。
-> - 本指南保持更新，欢迎任何人提出改进意见，如发现有错误或遗漏的点，请提 [Issue](https://github.com/yikeke/zh-style-guide/issues/new "点击前往 GitHub")。
+> - 本指南保持更新，欢迎任何人提出改进意见，如发现有错误或遗漏的点，请提 [Issue](https://github.com/yikeke/zh-style-guide/issues/new)。
 
 希望本指南的出现能为日后业界标准的建立贡献一点力量。
 
@@ -28,7 +28,7 @@
 
 ## 用词说明
 
-本指南使用的表示“要求”的全部关键词已在下表第二列列出，具体释义请参见 [RFC2119](https://tools.ietf.org/html/rfc2119 "点击前往外部站点") 对相应词语做出的相关规定：
+本指南使用的表示“要求”的全部关键词已在下表第二列列出，具体释义请参见 [RFC2119](https://tools.ietf.org/html/rfc2119) 对相应词语做出的相关规定：
 
 | RFC2119 中定义的关键词     | 对应的中文关键词            | 释义说明                                                     |
 | -------------------------- | --------------------------- | ------------------------------------------------------------ |
@@ -44,11 +44,11 @@
 
 此列表汇总了本指南的所有贡献者名单。
 
-欢迎在 GitHub 上[提交 Pull Request](https://github.com/yikeke/zh-style-guide "点击前往 GitHub") 进行贡献。
+欢迎在 GitHub 上[提交 Pull Request](https://github.com/yikeke/zh-style-guide) 进行贡献。
 
 | 贡献者    |  总提交贡献数   |  First Commit   |
 | ----------- | ------------------ | ------------------ |
 | yikeke |  37  |  2020-09-14  |
 | CharLotteiu |  12  |  2020-09-14  |
 
-> 数据来源：[yikeke/zh-style-guide - Contributor Graph](https://github.com/yikeke/zh-style-guide/graphs/contributors "点击前往 GitHub")。
+> 数据来源：[yikeke/zh-style-guide - Contributor Graph](https://github.com/yikeke/zh-style-guide/graphs/contributors)。
