--- a/source/拼写与语法/文档质量检查工具.md
+++ b/source/拼写与语法/文档质量检查工具.md
@@ -2,9 +2,9 @@
 
 一名成熟的文档工程师应该配置自己的文档编辑器，保证其能对文档自动进行拼写和语法检查。推荐以下几种对文档自动进行质量检查的工具。
 
-- [Grammarly](https://www.grammarly.com/grammar-check "点击前往外部站点")
+- [Grammarly](https://www.grammarly.com/grammar-check)
 - Visual Studio Code 插件
-    - [Code Spell Checker](https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker "点击前往外部站点")
-    - [Markdownlint](https://marketplace.visualstudio.com/items?itemName=DavidAnson.vscode-markdownlint "点击前往外部站点")
-- [LanguageTool](https://languagetool.org/ "点击前往外部站点")
-- [Vale](https://github.com/errata-ai/vale "点击前往外部站点")
+    - [Code Spell Checker](https://marketplace.visualstudio.com/items?itemName=streetsidesoftware.code-spell-checker)
+    - [Markdownlint](https://marketplace.visualstudio.com/items?itemName=DavidAnson.vscode-markdownlint)
+- [LanguageTool](https://languagetool.org/)
+- [Vale](https://github.com/errata-ai/vale)
