--- a/source/语言风格/用词恰当.md
+++ b/source/语言风格/用词恰当.md
@@ -4,7 +4,7 @@
 
 ### 禁用词
 
-用词正确体现在不使用有冒犯性的禁用词语。技术文档中的禁用词可参考[新华社 2015 年 11 月发布的《新华社新闻报道中的禁用词（第一批）》](https://www.digitaling.com/articles/22975.html "点击前往外部站点")。技术文档虽不是新闻报道，但作为技术传播领域的大众传播物，应当同样考虑文档传播带来的影响。避免使用具有冒犯性的词语，能为个人或公司节省不必要的麻烦。
+用词正确体现在不使用有冒犯性的禁用词语。技术文档中的禁用词可参考[新华社 2015 年 11 月发布的《新华社新闻报道中的禁用词（第一批）》](https://www.digitaling.com/articles/22975.html)。技术文档虽不是新闻报道，但作为技术传播领域的大众传播物，应当同样考虑文档传播带来的影响。避免使用具有冒犯性的词语，能为个人或公司节省不必要的麻烦。
 
 以下是《新华社新闻报道中的禁用词（第一批）》中比较适用于技术文档的几点：
 
