add a new contributor

--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -50,5 +50,6 @@
 | ----------- | ------------------ | ------------------ |
 | yikeke |  37  |  2020-09-14  |
 | CharLotteiu |  12  |  2020-09-14  |
+| oldLady344 |  3  |  2020-10-05  |
 
 > 数据来源：[yikeke/zh-style-guide - Contributor Graph](https://github.com/yikeke/zh-style-guide/graphs/contributors)。
