mainly update 中英文混用时标点符号用法

--- a/source/标点符号/中文标点使用.md
+++ b/source/标点符号/中文标点使用.md
@@ -2,7 +2,7 @@
 
 使用中文标点符号建议遵循以下规范。
 
-- **中文语句中的标点符号一律使用全角形式（即中文输入法下的标点符号）**，不得使用半角形式（即英文输入法下的标点符号）。
+- **中文语境下的标点符号一律使用全角形式（即中文输入法下的标点符号）**，不得使用半角形式（即英文输入法下的标点符号）。
 - **中文全角标点符号两旁禁止空半角空格**。示例：
 
     - 【错误示例】如果 CPU 设有限额 （从 K8S 指定的上限） ，则需要手动调整。
