--- a/source/标点符号/中英文混用时标点用法.md
+++ b/source/标点符号/中英文混用时标点用法.md
@@ -4,11 +4,11 @@
 
 本节介绍中英文交接处使用标点符号的建议规范。
 
-## 根本原则
+### 根本原则
 
 中文技术文档主要服务的是中文文本，应该**以中文标点符号为主**，以英文标点符号为辅。
 
-## 基本规范
+### 基本规范
 
 1. 中文句子内夹用英文单词或词组时：
 
@@ -37,11 +37,11 @@
 | 破折号 | 这个符号表示禁止——stop。 | “Well—emm, I don't know how to say—but I hope you can understand my position.”他纠结地说。 |
 | 省略号 | 使用 so...that... 句型表示结果，意思是“如此……以致……”。 | “I don't know how to say this...”的意思是“我不知道该怎么说了……”。|
 
-## 补充规范
+### 补充规范
 
 除了两条基本规范外，本节介绍一些补充规范。
 
-### 英文标题或引文中的结尾符号
+#### 英文标题或引文中的结尾符号
 
 - **英文标题或引文中的结尾问号必须保留**
 
@@ -53,7 +53,7 @@
     - 【示例一】“A little book of language!”一文受到了很多好评。
     - 【示例二】“加勒比海盗”的电影中的海盗总是说“Aye! Aye!”。
 
-### 中英文括号的使用
+#### 中英文括号的使用
 
 中英文混用时使用括号**建议**遵循以下规范。
 
@@ -69,7 +69,7 @@
     - 【错误示例】斜杠 (slash 或 forward slash) 和反斜杠 (backslash) 是两种符号。
     - 【正确示例】斜杠（slash 或 forward slash）和反斜杠 (backslash) 是两种符号。
 
-### 英文的大小写形式
+#### 英文的大小写形式
 
 - 当中文句子中夹有英文单词或词组时，无论该英文单词或词组位于中文句子的开头、中间还是末尾，**普通单词、词组必须小写**；**专有名词等在英文中必须大写的单词或词组，保留其大写形式**。
 
@@ -81,7 +81,7 @@
     - 【示例一】Follow your fear 是我的座右铭。
     - 【示例二】他经常与人说“Never set a limit to yourself.”。
 
-### 英文书籍、报刊、标题的引用方法
+#### 英文书籍、报刊、标题的引用方法
 
 - 中文句子中夹用英文书籍或报刊名时，不能使用中文书名号《》，而应使用斜体字表示，如果无法使用斜体字，建议使用中文引号包裹引用。
 
