--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -4,7 +4,7 @@
 
 ### 句号
 
-句号的形式为“。”，常用于陈述句末尾的停顿。
+句号的形式为“。”，表示陈述语气，用于句末停顿。
 
 句号表示一个句子的意思已经完整，技术文档中应善用句号切分语意，帮助用户理清逻辑。
 
@@ -15,7 +15,7 @@
 
 逗号的形式为“，”，表示句子内部的一般性停顿。
 
-逗号虽然没有特殊、专门的意义，使用也最普遍，但是不能滥用。**技术文档中不要出现“一‘逗’到底”的错误，即整个段落除了段落结尾外，全部停顿都使用逗号。**
+逗号使用最为普遍，但不能滥用。**技术文档中不要出现“一‘逗’到底”的错误，即整个段落除了段落结尾外，全部停顿都使用逗号。**
 
 - 【错误示例】首先判断出错发生在 relay log 写入还是 binlog replication/syncer unit 同步（通过日志出错信息中的 component 信息即可判断），如果错误发生在 relay log 模块，binlog replication/syncer unit 保存的断点都是正确的情况，可以先停止任务，停止 DM-worker，手动调节 relay meta 的 binlog-position 到 4，重启 DM-worker 重新拉取 relay log ，relay log 写入正常后启动任务会自动从断点继续同步。
 
@@ -36,42 +36,24 @@
 
 【示例】Placement Driver（简称 PD）是整个集群的管理模块，其主要工作有三个：一是存储集群的元信息（某个 Key 存储在哪个 TiKV 节点）；二是对 TiKV 集群进行调度和负载均衡（如数据的迁移、Raft group leader 的迁移等）；三是分配全局唯一且递增的事务 ID。
 
-分项说明时，如果分成了几大项，大项下面又分几个小项，则可以小项末尾用分号，大项末尾用句号，如例二所示。
-
-【例一】转换的范围包括：
-
-- 图形元素转换为接收终端可处理的格式；
-- 音频格式转换为接收终端可处理的格式；
-- 文本编码格式转换为接收终端可处理的格式。
-
-【例二】具体来讲，分为如下几种情况：
-
-(1) XXXXXXXXXXXXXX。
-
-- XXXXXX；
-- XXXXXXXX；
-- XXXXXXXX。
-
-(2) XXXXXXXXX。
-
-(3) XXXXXXXXXXXXXXX。
-
 ### 冒号
 
 冒号的形式为“：”。在技术文档中常用在需要解释的词语后边，表示引出解释和说明。
 
 冒号在技术文档中常用来引出列表。
 
-【示例】设备分为以下几个部分：
+【示例】冯·诺依曼体系计算机的硬件系统分为五个部分：
 
-- 机柜
-- 单板
-- 外接设备
+- 运算器
+- 控制器
+- 存储器
+- 输入设备
+- 输出设备
 
-建议不要连续使用冒号。
+一个句子内建议不要连续套用冒号。
 
-- 【错误示例】计费策略：表示计费：1，不计费：2，计费。
-- 【正确示例】计费策略：1 表示计费，2 表示不计费。
+- 【错误示例】计数系统：逻辑表示：1，计数器加一；0，计数器不变。
+- 【正确示例】计数系统：1 表示计数器加一，0 表示计数器不变。
 
 ### 引号
 
@@ -79,7 +61,7 @@
 
 本节只讨论弯引号使用的一些规范，下文中使用的“引号”均表示“弯引号”。
 
-- 引号里面还要用引号时，外面一层用双引号，里面一层用单引号。
+- 引号内套用引号时，外面一层用双引号，里面一层用单引号。
 - 技术文档出现报错信息、特定操作或名称、缩略语提示、特殊名词、引用文档的节选等时，建议使用引号。
 
     - 【正确示例一】启动集群或者升级集群过程中出现”Timeout when waiting for search string 200 OK”是什么原因？
@@ -101,52 +83,53 @@
 中文文档中一个词语或句子后紧跟的注释性文字，用圆括号进行注解。注释句子里某些词语时，圆括号放在被注释词语之后；注释整个句子时，圆括号放在句末标点之后。
 
 - 【正确示例一】TiDB 使用周期性运行的 GC（Garbage Collection，垃圾回收）来进行清理。
-- 【正确示例二】写技术说明类文档和文学创作不同，不能摊开稿纸搞“即兴”。（其实文学创作也要有素养才能有“即兴”。）
+- 【正确示例二】需要编辑配置文件以调整参数的值。（该方式不推荐使用）
 
-一般来说，方括号和尖括号在技术文档或产品手册中有以下几种特定用法。
+一般来说，方括号和尖括号在技术文档中有以下几种特定用法。
 
-- 方括号“[ ]”表示窗口名、菜单名等，如“弹出[新建用户]窗口”、“[文件/新建/文件夹]多级菜单”。
-- 带尖括号“< >”表示按钮名、键名，如“单击<确定>按钮”、“<Tab> 表示制表键”。
+- 方括号“[ ]”表示窗口名、菜单名等，如“弹出[新建任务]窗口”、“[显示/外观/全屏]多级菜单”。
+- 带尖括号“< >”表示按钮名、键名等，如“点击<取消>按钮”、“`<Tab>` 表示制表键”。
 
 ### 书名号
 
-书名号的形式为双书名号“《》”。书名、篇名、报纸名、刊物名等，用书名号标示。英文手册名称用双引号或斜体表示，不用书名号标示。
+书名号的形式为“《》”。书籍名、报刊名等名称需要用书名号标示。英文手册名称用中文双引号或斜体表示，不用书名号标示。
 
-【正确示例】详情见《TiDB-Lightning 表库过滤》。
+- 【示例一】《小王子》这本书有很多种语言版本。
+- 【示例二】详情见“TiDB-Lightning 表库过滤”一文。
 
-书名号中的文档名称建议使用全称，不能使用简称。
+书名号中的文档名称建议使用全称，不使用简称。
 
 - 【错误示例】具体操作请参见《表库过滤》。
-- 【正确示例】具体操作请参见《TiDB-Lightning 表库过滤》。
+- 【正确示例】具体操作请参见《TiDB Lightning 表库过滤》。
 
 ### 连接号
 
-连接号的常见形式为“—”，占一个字的位置。连接号还有另外四种形式，即长横“——”（占两个字的位置）、半字线“–”（占半个字的位置）、短划线“-”（占1/3个字的位置）和浪纹“～”（占一个字的位置）。
+连接号的常见形式包括一字线“—”（占一个字的位置）、长横“——”（占两个字的位置）、半字线“–”（占半个字的位置）、短划线“-”（占 1/3 个字的位置）和浪纹“～”（占一个字的位置）。
 
-几种连接号的用法及插入方式如下表所示。
+几种连接号的用法如下表所示。
 
-| 符号名称 | 符号 | 举例                 | 插入方式             |
-| -------- | ---- | ------------------------------------- | ----------------------------------------- |
-| 一字线   | —    | 常用于汉语名词之间：    压力—温度曲线、化学—物理反应         | Word 里选择[插入/特殊符号]，选择特殊符号中的“长划线”。       |
-| 半字线   | –    | 常用于汉字和数字(字母)之间：   铀–235、惠普–5000             | Word 里选择[插入/特殊符号]，选择特殊符号中的“短划线”。       |
-| 短划线   | -    | 一些外来的词汇中常用短划线：E-Mail、CD-ROM、ITU-T、8-bit、 RJ-45 插头、STM-16  <br>   电话号码中的连接符也统一用短划线：025-12345678 | Word 里选择[插入/特殊符号]，选择特殊符号中的“不间断连字符”，或者在英文输入法中按减号键输入。 |
-| 浪纹     | ～    | 用于表示数量的范围：1～3                                      | 英文输入法中，通 过 键 盘 <shift+～> 输入。                   |
-| 长横     | ——   | 常用于地名之间：北京——天津                                   | Word 里选择[插入/特殊符号]，选择特殊符号中的“长划线”，连续输入两次。 |
+| 符号名称 | 符号 | 用法举例                 |
+| -------- | ---- | ------------------------------------- |
+| 一字线   | —    | 常用于汉语名词之间：    压力—温度曲线、化学—物理反应         |
+| 半字线   | –    | 常用于汉字和数字(字母)之间：   铀–235、惠普–5000             |
+| 短划线   | -    | 一些外来的词汇中常用短划线：E-Mail、CD-ROM、ITU-T、8-bit、 RJ-45 插头、STM-16  <br>   电话号码中的连接符也统一用短划线：025-12345678 |
+| 浪纹     | ～    | 用于表示数量的范围：1～3                                      |
+| 长横     | ——   | 常用于地名之间：北京——上海特快列车                                   |
 
 ### 破折号
 
+> 注意：
+>
+> 破折号与连接号中的长横都是占两个字的位置，符号形式相同，但两者含义不同：破折号用来解释说明前文；连接号是把前后相关词语连成一个整体。
+
 破折号的形式为“——”，占两个字的位置。技术文档中破折号常用于引出注释和说明部分。
 
-【示例】一种有机地结合了高速大容量光纤传输技术和智能网络技术的新体制——光同步传送网应运而生。
+【示例】于是新的数据库概念——NewSQL 数据库应运而生。
 
-使用破折号要注意以下几点。
+破折号前后不空格。
 
-- 破折号前后不空格。
-
-    - 【错误示例】一种新体制 —— 光同步传送网应运而生。
-    - 【正确示例】一种新体制——光同步传送网应运而生。
-
-- 破折号与连接号中的长横都是占两格的长横，符号形式相同。但两者含义不同，破折号用来解释、说明前文；连接号是把前后相关词语连成一个整体。
+- 【错误示例】于是新的数据库概念 —— NewSQL 数据库应运而生。
+- 【正确示例】于是新的数据库概念——NewSQL 数据库应运而生。
 
 ### 省略号
 
