--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -104,25 +104,21 @@
 
 ### 连接号
 
-连接号的常见形式包括一字线“—”（占一个字的位置）、长横“——”（占两个字的位置）、半字线“–”（占半个字的位置）、短划线“-”（占 1/3 个字的位置）和浪纹“～”（占一个字的位置）。
+连接号表示某些相关联成分的连接关系。连接号的常见形式包括一字线“—”（占一个汉字的宽度）、短横线“-”（占半个汉字的宽度）和浪纹线“～”（占一个汉字的宽度）。
 
-几种连接号的用法如下表所示。
+几种连接号的作用及用法示例如下表所示。
 
-| 符号名称 | 符号 | 用法举例                 |
-| -------- | ---- | ------------------------------------- |
-| 一字线   | —    | 常用于汉语名词之间：    压力—温度曲线、化学—物理反应         |
-| 半字线   | –    | 常用于汉字和数字(字母)之间：   铀–235、惠普–5000             |
-| 短划线   | -    | 一些外来的词汇中常用短划线：E-Mail、CD-ROM、ITU-T、8-bit、 RJ-45 插头、STM-16  <br>   电话号码中的连接符也统一用短划线：025-12345678 |
-| 浪纹     | ～    | 用于表示数量的范围：1～3                                      |
-| 长横     | ——   | 常用于地名之间：北京——上海特快列车                                   |
+| 符号 | 用法举例                 |
+| --- | ------------------------------------- |
+| 一字线 —    | - 标示时间起止、空间起止或走向、序数起止等，如鲁迅（1881—1936）、2016—2020 年、1—3 月、北京—上海特快列车、秦岭—淮河线、13—15 号楼、第 50—100 条 <br> - 在标准编号中连接顺序号与年号，如 GB/T 15835—2011 《出版物上数字用法》         |
+| 短横线 -    |  - 在电话号码、门牌号、图表编号、阿拉伯数字年月日等各种复合名词中起连接作用，如学院路15号2-1-201室、图2-1、表3-4、2020-9-30、吐鲁番-哈密盆地  <br>  - 在外来语内部成分中起连接作用，如让-雅各·卢梭、盎格鲁-撒克逊人    <br>  - 表示某些产品的名称和型号，如 GC-50 型号设备    |
+| 浪纹线 ～    | 标示数值范围：1～3 g、2～4 米、3～7 年内                                      |
+
+> 粗略记忆方式：表示起止用一字线（—），表示范围用浪纹线（～），复合名词用短横线（-）。
 
 ### 破折号
 
-> 注意：
->
-> 破折号与连接号中的长横都是占两个字的位置，符号形式相同，但两者含义不同：破折号用来解释说明前文；连接号是把前后相关词语连成一个整体。
-
-破折号的形式为“——”，占两个字的位置。技术文档中破折号常用于引出注释和说明部分。
+破折号的形式为“——”，占两个汉字的宽度。技术文档中破折号常用于引出注释和说明部分。
 
 【示例】于是新的数据库概念——NewSQL 数据库应运而生。
 
@@ -133,7 +129,7 @@
 
 ### 省略号
 
-中文省略号的形式为“……”，有六个小圆点，占两个字的位置。一般而言，中文语句中禁止使用三个小圆点“…”（英文省略号），必须使用六个小圆点“……”。
+中文省略号的形式为“……”，有六个小圆点，占两个汉字的宽度。一般而言，中文语境中禁止使用英文省略号，即三个小圆点“…”（占一个汉字的宽度），必须使用六个小圆点“……”。
 
 省略号主要在以下两种场景中使用。
 
