hide my commits

--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -48,7 +48,7 @@
 
 | 贡献者    |  总提交贡献数   |  First Commit   |
 | ----------- | ------------------ | ------------------ |
-| yikeke |  37  |  2020-09-14  |
+| yikeke |  Author  |  2020-09-14  |
 | CharLotteiu |  12  |  2020-09-14  |
 | oldLady344 |  3  |  2020-10-05  |
 
