--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -37,14 +37,13 @@
 
 - 《标点符号用法》GB/T 15834—2011
 - 《夹用英文的中文文本的标点符号用法（草案）》
+- [易混标点符号：一字线（—）、短横线（-）、浪纹线（～）](https://zhuanlan.zhihu.com/p/87950176)
 
 列表：
 
-[写给初学者的 Markdown 教程](https://jdhao.github.io/2018/09/21/markdown_tutorial_for_beginners/)
-
-[英语技术文档中如何正确使用无序列表和有序列表？](https://mp.weixin.qq.com/s/DuEmZLsmpTRpawgPGLPifw)
-
-[使用无序列表的 7 项注意](http://colachan.com/post/3548)
+- [写给初学者的 Markdown 教程](https://jdhao.github.io/2018/09/21/markdown_tutorial_for_beginners/)
+- [英语技术文档中如何正确使用无序列表和有序列表？](https://mp.weixin.qq.com/s/DuEmZLsmpTRpawgPGLPifw)
+- [使用无序列表的 7 项注意](http://colachan.com/post/3548)
 
 引号：
 
