--- a/source/名称与命名/名称使用.md
+++ b/source/名称与命名/名称使用.md
@@ -1,6 +1,44 @@
 ## 名称使用
 
-对于有既定写法的名称，在技术文档中应准确指称，尤其注意大小写问题。
+中文技术文档中使用一些专用名称时，应注意如下规范。
 
-- 【错误示例】mysql、Linkedin、postgresql
-- 【正确示例】MySQL、LinkedIn、PostgreSQL
+### 国外公司、品牌或产品名称使用规范
+
+中文文档中指称国外公司、品牌或产品名称时，建议遵循以下规范：
+
+- 对于**中文读者熟知**的公司、品牌或产品名称，只需用**中文**指称
+- 对于**中文读者不熟悉、但有中文官方译名**的公司、品牌或产品名称，建议用“**中文官方译名 (英文官方名称)**”形式
+- 对于**中文读者不熟悉、或者无中文官方译名**的公司、品牌或产品名称，建议直接用**英文**指称，且必须使用**正确的大小写**形式
+
+    - 【错误示例】mysql、github
+    - 【正确示例】MySQL、GitHub
+
+判断中文大众读者是否熟知某名称具有主观性，如果不受篇幅限制，可以优先考虑“中文官方译名 (英文官方名称)”形式。
+
+### 公司、品牌或产品名称列表
+
+下表仅提供参考示例，不同公司可视自身内容情况作相应的调整。
+
+> 下表待补充，欢迎贡献！
+
+|中文读者熟知|中文读者不熟悉、但有中文官方译名|中文读者不熟悉、或者无中文官方译名|
+|---|---|---|
+|微软|威睿 (VMware)|GitHub|
+|苹果|塔多思 (Trados)|SDL|
+|甲骨文|雪佛龙 (Chevron)|MySQL|
+|沃尔玛|埃克森美孚 (Exxon Mobil)|Alphabet|
+|亚马逊|大众 (Volkswagen)|MongoDB|
+|惠普|戴姆勒 (Daimler)|Azure|
+|宝马|西门子 (Siemens)||
+|波音|软银 (SoftBank)||
+|雀巢|东芝 (Toshiba)||
+|宝洁|||
+|强生|||
+|索尼|||
+|百事|||
+|可口可乐|||
+|高盛|||
+|佳能|||
+|推特|||
+|脸书|||
+|领英|||
