--- a/source/名称与命名/名称使用.md
+++ b/source/名称与命名/名称使用.md
@@ -13,7 +13,10 @@
     - 【错误示例】mysql、github
     - 【正确示例】MySQL、GitHub
 
-判断中文大众读者是否熟知某名称具有主观性，如果不受篇幅限制，可以优先考虑“中文官方译名 (英文官方名称)”形式。
+注意事项：
+
+- 判断中文大众读者是否熟知某名称具有主观性。如果不确定中文读者是否熟知某名称，建议优先考虑“中文官方译名 (英文官方名称)”形式。
+- 在使用“中文官方译名 (英文官方名称)”形式时，只需在第一次出现该名称的时候使用完整形式，之后再出现时使用中文官方译名即可。
 
 ### 公司、品牌或产品名称列表
 
@@ -32,7 +35,7 @@
 |宝马|西门子 (Siemens)||
 |波音|软银 (SoftBank)||
 |雀巢|东芝 (Toshiba)||
-|宝洁|||
+|宝洁|思科 (Cisco)||
 |强生|||
 |索尼|||
 |百事|||
