--- a/source/语言风格/用词恰当.md
+++ b/source/语言风格/用词恰当.md
@@ -28,7 +28,7 @@
 2. 必须明确“其”、“该”、“此”、“这”等代词指代的内容，保证不造成歧义。
 
     - 【错误示例】如果希望从本地已编译好的二进制文件构建 PD、TiKV 或 TiDB 的镜像，需要将其 `image` 字段留空。
-    - 【正确示例】如果希望从本地已编译好的 binary 文件构建 PD、TiKV 或 TiDB 镜像，需要将相应镜像的 `image` 字段留空。
+    - 【正确示例】如果希望从本地已编译好的二进制文件构建 PD、TiKV 或 TiDB 的镜像，需要将相应镜像的 `image` 字段留空。
 
 3. 不建议使用表示程度、强调语气的词，因为这类词词义通常比较模糊，或者显得主观绝对，建议用具体的数据或实例代替。例如，以下类型的词建议避免使用。
 
