--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -52,5 +52,6 @@
 | CharLotteiu |  13  |  2020-09-14  |
 | oldLady344 |  3  |  2020-10-05  |
 | techkang |  1  |  2020-11-06  |
+| jtr109 |  1  |  2020-11-09  |
 
 > 数据来源：[yikeke/zh-style-guide - Contributor Graph](https://github.com/yikeke/zh-style-guide/graphs/contributors)。
