change bold for render

--- a/source/文档结构样式/标题.md
+++ b/source/文档结构样式/标题.md
@@ -4,7 +4,7 @@
 
 ### 标题的层级
 
-技术文档中使用标题最多不超过四级。**标题从一级开始递增使用，禁止跳级使用。**例如：一级标题下面不能直接使用三级标题；二级标题下面不能直接使用四级标题。
+技术文档中使用标题最多不超过四级。**标题从一级开始递增使用，禁止跳级使用**。例如：一级标题下面不能直接使用三级标题；二级标题下面不能直接使用四级标题。
 
 - 一级标题：即文章标题
 - 二级标题：文章正文部分的标题
