--- a/source/拼写与语法/拼写.md
+++ b/source/拼写与语法/拼写.md
@@ -10,7 +10,7 @@
 
 ### 英文的大小写形式
 
-- 英文大小写形式不能写错。如不能写成 mysql 数据库，应该写成 MySQL 数据库。
+- 英文大小写形式不能写错。如不能写成 mysql 数据库，应该写成 MySQL 数据库，具体参考[名称使用](https://zh-style-guide.readthedocs.io/zh_CN/latest/名称与命名/名称使用.html#id2)一节。
 
 - 当中文句子中夹有英文单词或词组时，无论该英文单词或词组位于中文句子的开头、中间还是末尾，**普通单词、词组必须小写**；**专有名词等在英文中必须大写的单词或词组，保留其大写形式**。
 
