--- a/source/名称与命名/名称使用.md
+++ b/source/名称与命名/名称使用.md
@@ -10,8 +10,8 @@
 - 对于**中文读者不熟悉、但有中文官方译名**的公司、品牌或产品名称，建议用“**中文官方译名 (英文官方名称)**”形式
 - 对于**中文读者不熟悉、或者无中文官方译名**的公司、品牌或产品名称，建议直接用**英文**指称，且必须使用**正确的大小写**形式
 
-    - 【错误示例】mysql、github
-    - 【正确示例】MySQL、GitHub
+    - 【错误示例】mysql、github、tiktok、wechat
+    - 【正确示例】MySQL、GitHub、TikTok、WeChat
 
 注意事项：
 
