--- a/source/文档内容元素/空白符号.md
+++ b/source/文档内容元素/空白符号.md
@@ -8,7 +8,7 @@
 
 | 空白类型 | 相应规范 |
 | ---- | ------------------------------------------------------------ |
-| 空格 | - 禁止使用全角空格，**一律使用半角空格**。 <br> - 中文字符（包括汉字和中文标点符号）和中文字符之间禁止空半角空格。 <br> - **英文字符和阿拉伯数字**一般使用半角格式，所以应使用半角空格包围，以下情况例外： <br> - 位于句首时，左边空格省略。  <br> - 其右侧为半角标点或全角标点时，右边空格省略。 <br> - 除表示缩进、列表级别、代码块中固有空格外，禁止连续出现两个及以上的半角空格。 <br> - 不建议使用 Tab（制表符）替换空格。 |
+| 空格 | - 禁止使用全角空格，**一律使用半角空格**。 <br> - 中文字符（包括汉字和中文标点符号）和中文字符之间禁止空半角空格。 <br> - **英文字符和阿拉伯数字**一般使用半角格式，所以应使用半角空格包围，以下情况例外：1）位于句首时，左边空格省略； 2）其右侧为半角标点或全角标点时，右边空格省略。 <br> - 除表示缩进、列表级别、代码块中固有空格外，禁止连续出现两个及以上的半角空格。 <br> - 不建议使用 Tab（制表符）替换空格。 |
 | 空行 | - 不同段落间建议使用一个空行隔开。 <br> - 不同排版格式之间建议使用一个空行隔开，如标题与紧跟着的正文之间，正文与代码块之间、正文与表格之间等。 <br> - 禁止连续出现两个及以上的空行。 |
 | 其他 | 行宽：相同排版格式内保持一致即可，可自由在 80、120 字符中选择，原则上不超过 160 字符宽。 |
 
