--- a/source/文档内容元素/数字.md
+++ b/source/文档内容元素/数字.md
@@ -127,7 +127,7 @@
 
 技术文档中使用阿拉伯数字表示时分秒，建议遵循如下规范。
 
-- 计时方式即可采用 12 小时制，也可采用 24 小时制。如 11 时 31 分 或者 21 时 12 分。
+- 计时方式既可采用 12 小时制，也可采用 24 小时制。如 11 时 31 分 或者 21 时 12 分。
 - 时分秒的表达顺序按照口语中时、分、秒的自然顺序书写。如 15 时 31 分、14 时 12 分 36 秒。
 - 时分秒也可使用“:”替代。如 14:12:16、3:15:59。
 
