--- a/source/文档内容元素/图形和图片.md
+++ b/source/文档内容元素/图形和图片.md
@@ -4,7 +4,7 @@
 
 - 必须使用清晰可辨的图形图片。
 - 中文文档里图形图片上的文字建议都用中文，如果原图文字是其他语言，应该先做好图片本地化工作。
-- 文字建议使用**免费开源可商用字体**，以免引入法律风险。
+- 文字建议使用**免费开源可商用字体**，以免引入法律风险。如不确定使用的字体是否能商用，可以在[360 查字体](http://fonts.safe.360.cn/)网站中查证。
 - 同一文档内图形图片上的中文应该统一字体（如“思源黑体”），英文和数字也要统一字体（如“Times New Roman”）。
 - 图形图片中避免出现大段文字，描述性语言建议放到图外，用编号替代。
 - 图形图片中包含缩略语时，需要在图说明中对缩略语进行解释。
