--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -48,3 +48,7 @@
 引号：
 
 [为什么在知乎上表引用时，用直角引号（「」）而不是弯引号（“”）？](https://www.zhihu.com/question/19589668)
+
+语言文字：
+
+《常见语言文字错误防范手册》. 周奇主编. 北京: 中国标准出版社, 2010.
