--- a/source/文档内容元素/数字.md
+++ b/source/文档内容元素/数字.md
@@ -176,3 +176,15 @@
 - “2052”的汉字形式为“两千零五十二”（不写为“两千〇五十二”）
 - “100.06”的汉字形式为“一百点零六”（不写为“一百点〇六”）
 - “公元 2019 年”的汉字形式为“二〇一九”（不写为“二零一九”）
+
+#### 二、2、两的用法
+
+“二”“2”“两”表示的数值相同，但是用法有别：
+
+- “二”“两”在度量衡单位和百千万前面可以通用。
+- 序数、分数、小数用“二”，不用“两”。
+- 常用量词（如个、本、件、回、种、天）前面，用“两”不用“二”。
+- 用“两”的地方不用“2”。
+- 用“二”的地方如果强调计量和统计意义时可以用“2”。
+
+来源：《常见语言文字错误防范手册》
