--- a/source/文档内容元素/数字.md
+++ b/source/文档内容元素/数字.md
@@ -179,6 +179,8 @@
 
 #### 二、2、两的用法
 
+> 以下规范来源于[《常见语言文字错误防范手册》](https://baike.baidu.com/item/%E5%B8%B8%E8%A7%81%E8%AF%AD%E8%A8%80%E6%96%87%E5%AD%97%E9%94%99%E8%AF%AF%E9%98%B2%E8%8C%83%E6%89%8B%E5%86%8C)。
+
 “二”“2”“两”表示的数值相同，但是用法有别：
 
 - “二”“两”在度量衡单位和百千万前面可以通用。
@@ -186,5 +188,3 @@
 - 常用量词（如个、本、件、回、种、天）前面，用“两”不用“二”。
 - 用“两”的地方不用“2”。
 - 用“二”的地方如果强调计量和统计意义时可以用“2”。
-
-来源：《常见语言文字错误防范手册》
