--- a/source/文档内容元素/数字.md
+++ b/source/文档内容元素/数字.md
@@ -186,5 +186,4 @@
 - “二”“两”在度量衡单位和百千万前面可以通用。
 - 序数、分数、小数用“二”，不用“两”。
 - 常用量词（如个、本、件、回、种、天）前面，用“两”不用“二”。
-- 用“两”的地方不用“2”。
-- 用“二”的地方如果强调计量和统计意义时可以用“2”。
+- 用“二”和“两”的地方如果强调计量和统计意义时可以用“2”。
