update 顿号 examples

--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -49,6 +49,11 @@
 
 [为什么在知乎上表引用时，用直角引号（「」）而不是弯引号（“”）？](https://www.zhihu.com/question/19589668)
 
+顿号：
+
+- [8 例顿号误用解析 - 中国编辑校对网](http://www.bianjiao.net/page139?article_id=149&pagenum=all)
+- [顿号（标点符号）- 百度百科](https://baike.baidu.com/item/%E9%A1%BF%E5%8F%B7/998522)
+
 语言文字：
 
 《常见语言文字错误防范手册》. 周奇主编. 北京: 中国标准出版社, 2010.
