--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -31,7 +31,7 @@
 
 | 错误示例             | 正确示例             | 解释                        |
 | ------------------- | :-------------- | ---------------------- |
-| 此操作会关闭 TiDB，Pump，TiKV，PD 服务，并清空 Pump，TiKV，PD 数据目录。 | 此操作会关闭 TiDB、Pump、TiKV 和 PD 服务，并清空 Pump、TiKV 和 PD 的数据目录 |                                                              |
+| 此操作会关闭 TiDB，Pump，TiKV，PD 服务，并清空 Pump，TiKV，PD 数据目录。 | 此操作会关闭 TiDB、Pump、TiKV 和 PD 服务，并清空 Pump、TiKV 和 PD 的数据目录 | TiDB、Pump、TiKV、PD 是并列词语，使用顿号作短暂停顿即可，不需要用逗号。 |
 | 多角度、多侧面地观察分析事物，全方位，透视性地进行报道。     | 多角度、多侧面地观察分析事物，全方位、透视性地进行报道。     | 逗号虽然也可表示并列，但其停顿时间较长，如果并列词语之间顿号误用为逗号，会使语句松散，不便于语义的表述和朗读。 |
 | 如何进一步增强政府的危机意识、增强政府应对突发事件的透明度，提高应对突发事件的能力，真正做到处变不惊、处置有序，需要完善有关的制度。 | 如何进一步增强政府的危机意识，增强政府应对突发事件的透明度，提高应对突发事件的能力，真正做到处变不惊、处置有序，需要完善有关的制度。 | “增强政府的危机意识”和“增强政府应对突发事件的透明度”是分句，分句之间停顿时间较长，不能用顿号，应改为逗号。 |
 | 我们学习茅盾先生，就应该像他那样，坚持为人民写作，深入社会实践，反映社会生活的创作原则，与时代同步、与人民同心。 | 我们学习茅盾先生，就应该像他那样，坚持为人民写作，深入社会实践，反映社会生活的创作原则，与时代同步，与人民同心。 | 顿号前后并非并列词语，而是分句，因此顿号要改为逗号。         |
@@ -42,7 +42,7 @@
 | 在二十世纪六、七十年代，有关跨国公司向发展中国家收取了过高的技术转移费和向发展中国家转移了大量不适合发展中国家适用的技术的指责不绝于耳。 | 在二十世纪六七十年代，有关跨国公司向发展中国家收取了过高的技术转移费和向发展中国家转移了大量不适合发展中国家适用的技术的指责不绝于耳。 | **相邻的两个数字并列连用表示概数，必须使用汉字，连用的两个数字之间不得用顿号‘、’隔开。**（来自《GB/T 15835―1995《出版物上数字用法的规定》》） |
 | 加强政府、企业、科研机构和学术团体的密切合作，以实现产、学、研的有机结合。 | 加强政府、企业、科研机构和学术团体的密切合作，以实现产学研的有机结合。 | **有些简短的并列词语各项之间的联系很紧密，没有停顿，已成为不可分的整体，其内部不用顿号，并已约定俗成。**如“马列主义”“中小学生”“字词句”“产学研”“酸甜苦辣”等。 |
 | 3、行政文明建设中的依法行政将直接推动我国依法治国方略的实现。 | 3. 行政文明建设中的依法行政将直接推动我国依法治国方略的实现。 | 阿拉伯数字作为序数词，如“1”后用点号而不用顿号；汉字“一”后用顿号，“第一”后面用逗号。这些是约定俗成的用法。 |
-|                                                              | - “日”“月”构成“明”字。<br />- 店里挂着“顾客就是上帝”“质量就是生命”等横幅。<br />- 《红楼梦》《三国演义》《西游记》《水浒传》，是我国长篇小说的四大名著。<br />- 李白的“白发三千丈”（《秋浦歌》）、“朝如青丝暮成雪”（《将进酒》）都是脍炙人口的诗句。 | **标有引号的并列成分之间、标有书名号的并列成分之间通常不用顿号。**若有其他成分插在并列的引号之间或并列的书名号之间（如引语或书名号之后还有括注），宜用顿号。 |
+| - “日”、“月”构成“明”字。<br />- 店里挂着“顾客就是上帝”、“质量就是生命”等横幅。<br />- 《红楼梦》、《三国演义》、《西游记》、《水浒传》，是我国长篇小说的四大名著。<br />- 李白的“白发三千丈”（《秋浦歌》）“朝如青丝暮成雪”（《将进酒》）都是脍炙人口的诗句。 | **标有引号的并列成分之间、标有书名号的并列成分之间通常不用顿号。**若有其他成分插在并列的引号之间或并列的书名号之间（如引语或书名号之后还有括注），宜用顿号。 | - “日”“月”构成“明”字。<br />- 店里挂着“顾客就是上帝”“质量就是生命”等横幅。<br />- 《红楼梦》《三国演义》《西游记》《水浒传》，是我国长篇小说的四大名著。<br />- 李白的“白发三千丈”（《秋浦歌》）、“朝如青丝暮成雪”（《将进酒》）都是脍炙人口的诗句。 | **标有引号的并列成分之间、标有书名号的并列成分之间通常不用顿号。**若有其他成分插在并列的引号之间或并列的书名号之间（如引语或书名号之后还有括注），宜用顿号。 |
 | - 我走之后，你要不断进步、识字、生产。<br />- 这个故事讲得美丽、动人。 | - 我走之后，你要不断进步，识字，生产。<br />- 这个故事讲得美丽，动人。 | **并列的谓语，补语之间不用顿号，用逗号。**                   |
 
 以上规范来自 [8 例顿号误用解析 - 中国编辑校对网](http://www.bianjiao.net/page139?article_id=149&pagenum=all) 以及[顿号（标点符号）- 百度百科](https://baike.baidu.com/item/%E9%A1%BF%E5%8F%B7/998522) 等。
