--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -22,6 +22,8 @@
 
 [中文文案排版指北](https://github.com/sparanoid/chinese-copywriting-guidelines)
 
+[Requirements for Chinese Text Layout 中文排版需求](https://www.w3.org/TR/clreq/#mixed_text_composition_in_vertical_writing_mode)
+
 正确使用 Tab 和空格：
 
 - [缩进与对齐——正确地使用Tab和空格](https://blog.csdn.net/tonywearme/article/details/7061530)
