update an example about 顿号

--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -38,7 +38,7 @@
 | 资源等级结构（一次、二次、三次资源）比例失调，学科、地区分布不均衡、重复率过高等问题。 | 资源等级结构（一次、二次、三次资源）比例失调，学科、地区分布不均衡，重复率过高等问题。 | 这里误用顿号后，“学科、地区分布不均衡”与“重复率过高”成了并列词语，造成句子歧义。因此，要把“均衡”后的顿号改为逗号，使句子成为两个分句组成的复句。 |
 | 在我们现代化建设面临人口、资源、环境的承受力趋向极限、以及国际竞争力更趋激烈的双重挑战的形势下，教育理应发挥促进社会、环境与经济可持续发展的功能。 | 在我们现代化建设面临人口、资源、环境的承受力趋向极限以及国际竞争力更趋激烈的双重挑战的形势下，教育理应发挥促进社会、环境与经济可持续发展的功能。 | 顿号的作用相当于“和”“跟”“及”“或者”等连词。如果并列词语较长，最后一项可用“和”“跟”“及”“或者”等连词连接，连词前可以加逗号。此时的逗号，不仅表示停顿，而且也是为了行文疏朗有间隔。但连词前不能使用顿号。因为在并列词语中，连词的作用等同于顿号。如果在连词前使用顿号，就等于连用了两个顿号。 |
 | 任何教学大纲、教学方法、或者评估方法的不同，都可能培养出创新的思维。 | 任何教学大纲、教学方法或者评估方法的不同，都可能培养出创新的思维。 | 同上                                                         |
-| 为了实现上述价值目标，还必须同时相应地逐步减少和消除那些损害人的健康和权益、加剧人的痛苦和对立、妨碍人的全面发展与社会和谐的不合理、无意义的发展。 | 为了实现上述价值目标，还必须同时相应地逐步减少和消除那些损害人的健康和权益，加剧人的痛苦和对立，妨碍人的全面发展与社会和谐的不合理、无意义的发展。 | 有的并列词语内部又包含并列词语，形成多层次的并列词语。如果在多层次并列词语之间全用顿号，就使得并列词语之间的层次混乱，不利于理解。 |
+| 通过 TiUP cluster 组件就可以进行日常的运维工作，包括部署、启动、关闭、销毁、弹性扩缩容、升级 TiDB 集群、管理 TiDB 集群参数。 | 通过 TiUP cluster 组件就可以进行日常的运维工作，包括部署、启动、关闭、销毁、弹性扩缩容、升级 TiDB 集群，以及管理 TiDB 集群参数。 | 有的并列词语内部又包含并列词语，形成多层次的并列词语。如果在多层次并列词语之间全用顿号，就使得并列词语之间的层次混乱，不利于理解。 |
 | 在二十世纪六、七十年代，有关跨国公司向发展中国家收取了过高的技术转移费和向发展中国家转移了大量不适合发展中国家适用的技术的指责不绝于耳。 | 在二十世纪六七十年代，有关跨国公司向发展中国家收取了过高的技术转移费和向发展中国家转移了大量不适合发展中国家适用的技术的指责不绝于耳。 | **相邻的两个数字并列连用表示概数，必须使用汉字，连用的两个数字之间不得用顿号‘、’隔开。**（来自《GB/T 15835―1995《出版物上数字用法的规定》》） |
 | 加强政府、企业、科研机构和学术团体的密切合作，以实现产、学、研的有机结合。 | 加强政府、企业、科研机构和学术团体的密切合作，以实现产学研的有机结合。 | **有些简短的并列词语各项之间的联系很紧密，没有停顿，已成为不可分的整体，其内部不用顿号，并已约定俗成。**如“马列主义”“中小学生”“字词句”“产学研”“酸甜苦辣”等。 |
 | 3、行政文明建设中的依法行政将直接推动我国依法治国方略的实现。 | 3. 行政文明建设中的依法行政将直接推动我国依法治国方略的实现。 | 阿拉伯数字作为序数词，如“1”后用点号而不用顿号；汉字“一”后用顿号，“第一”后面用逗号。这些是约定俗成的用法。 |
