provide a self-referential case

--- a/source/语言风格/通俗易懂.md
+++ b/source/语言风格/通俗易懂.md
@@ -7,4 +7,10 @@
 
 ### 案例
 
-欢迎各位文档工作者补充你身边的案例。
+案例一：
+
+【错误】“欢迎各位 TW 们补充你身边的案例。”
+【正确】“欢迎各位文档工作者补充你身边的案例。”
+【解释】TW 是 Tech Writer 的意思，意为技术文档工程师或文档工程师。这是技术写作领域的从业者才知道的缩略语，为了让更广泛的受众理解，建议修改。
+
+欢迎各位文档工作者接着补充你身边的案例。
