--- a/source/语言风格/客观礼貌.md
+++ b/source/语言风格/客观礼貌.md
@@ -8,7 +8,7 @@
 - 不要使用使用反问句，不要让读者感受被质疑和挑战。
 - 不要轻易使用感叹句。感叹语气可能会让读者感受到被责备，建议仅用于特别强调的场景，例如：读者执行某项操作后，可能永久性地删除数据，需要提供强烈警示。
 - 不要轻易使用“请”、“抱歉”，除非真的对读者造成了困扰。
-- 对于to B读者，尽量避免过分亲切的称呼，例如“亲爱的”，建议始终使用“您”。
+- 避免过分亲切的称呼，例如“亲爱的”，建议始终使用“您”或“你”。
 
 ### 案例
 
