--- a/source/语言风格/用词恰当.md
+++ b/source/语言风格/用词恰当.md
@@ -11,6 +11,7 @@
 - 报道各种事实特别是产品、商品时不使用“最佳”、“最好”、“最著名”、“最新技术”、“最高水平”、“最先进水平”等具有强烈评价色彩的词语。
 - 对有身体伤疾的人士不使用“残废人”、“独眼龙”、“瞎子”、“聋子”、“傻子”、“呆子”、“弱智”等蔑称，而应使用“残疾人”、“盲人”、“聋人”、“智力障碍者”等词语。
 - 医药报道中不得含有“疗效最佳”、“根治”、“安全预防”、“安全无副作用”等词语，药品报道中不得含有“药到病除”、“无效退款”、“保险公司保险”、“最新技术”、“最高技术”、“最先进制法”、“药之王”、“国家级新药”等词语。
+- 如果产品部署涉及多地域/可用区，正确使用涉及中国领土、主权和港澳台的词汇。例如，“台湾”与“祖国大陆（或‘大陆’）”为对应概念，“香港、澳门”与“内地”为对应概念。此外，不得将台湾、香港、澳门与中国并列提及。也不建议将中国某地区与其他国家对应并列提及。
 - 作为国家通讯社，新华社通稿中不应使用“哇噻”、“妈的”等俚语、脏话、黑话等。如果在引语中不能不使用这类词语，均应用括号加注，表明其内涵。近年来网络用语中对脏语进行缩略后新造的“SB”、“TMD”、“NB”等，也不得在报道中使用。
 
 ### 常用词
