--- a/source/文档内容元素/单位符号.md
+++ b/source/文档内容元素/单位符号.md
@@ -6,4 +6,4 @@
 - **大多数情况下，数值与单位符号之间需要空一个半角空格**，如 7 kg、8 MB、10 GB。但有几种例外：
 
     - 单位是角度、摄氏度或百分号时，数值和单位之间不空格。如：60°、37°C、100% 等。
-    - 单位是英尺符号和英寸符号时，数值和单位之间不空格。如：4′5″ 表示 4 英尺 5 英寸。
+    - 单位是英尺符号和英寸符号时，数值和单位之间不空格。如：4′5″ 表示 4 英尺 5 英寸。注意，英尺符号为 `′`（[U+2032 Prime](https://www.compart.com/en/unicode/U+2032)），英寸符号为 `″`（[U+2033 Double Prime](https://www.compart.com/en/unicode/U+2033)）。
