fix(数字.md): 消除歧义
9 亿～20 亿（不写为 9～20 亿）-> 9 亿～20 亿（可写为 9～20 亿）

--- a/source/文档内容元素/数字.md
+++ b/source/文档内容元素/数字.md
@@ -112,7 +112,7 @@
 
 - 前后两个数值的附加符号或计量单位相同时，在**不造成歧义**的情况下，前一个数值的附加符号或计量单位可省略。
 
-    【示例】9 亿～20 亿（不写为 9～20 亿）、13 万元～100 万元（不写为 13～100 万元）、64 MB～1024 MB（不写为 64～1024 MB）、15%～30%（不写为 15～30%）
+    【示例】9 亿～20 亿（可写为 9～20 亿）、13 万元～100 万元（可写为 13～100 万元）、64 MB～1024 MB（可写为 64～1024 MB）、15%～30%（可写为 15～30%）
 
 #### 年月日
 
