Apply suggestions from code review

--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -1,6 +1,6 @@
 # 关于本指南
 
-本指南规范了一种中文写作风格，可用于技术文档的编写，是各家中文文案风格指南的综合，素材来源于互联网，旨在对中文技术文档的**语言风格、结构样式、内容元素、标点符号、格式排版**等方面给出参考规范。
+本指南规范了一种中文写作风格，主要用于技术文档的编写。素材来源于互联网，为各家中文文案风格指南的综合，旨在对中文技术文档的**语言风格、结构样式、内容元素、标点符号、格式排版**等方面给出参考规范。
 
 > **作者注：**
 >
@@ -24,7 +24,7 @@
 
 ## 使用原则
 
-本指南为查询手册，建议初次阅读本指南时，先大致浏览目录章节结构，了解本指南涵盖的内容范围之后，就编写文档时碰到的实际问题，再回头查找相应规范。
+本指南是一本查询手册，建议初次阅读本指南时，先大致浏览目录章节结构，了解本指南涵盖的内容范围；之后就编写文档时碰到的实际问题，再回头查找相应规范。
 
 ## 用词说明
 
