--- a/source/关于本指南.md
+++ b/source/关于本指南.md
@@ -1,10 +1,10 @@
 # 关于本指南
 
-本指南为中文技术文档的编写提供了一套风格指南规范。作者综合了在互联网上能找到的各家中文文案风格指南，在中文技术文档的**语言风格、结构样式、内容元素、标点符号、格式排版**等方面给出参考规范。
+本指南规范了一种中文写作风格，主要用于技术文档的编写。素材来源于互联网，为各家中文文案风格指南的综合，旨在对中文技术文档的**语言风格、结构样式、内容元素、标点符号、格式排版**等方面给出参考规范。
 
 > **作者注：**
 >
-> - 本指南只提供参考规范，不提供权威标准。一些规范在业界并无定论，有争议的点作者会以建议形式给出。
+> - 本指南只提供参考规范，不提供权威标准。一些规范在业界并无定论，争议点作者会以建议形式给出。
 > - 本指南欢迎所有业界同仁们贡献、讨论、改编。
 > - 本指南保持更新，欢迎任何人提出改进意见，如发现有错误或遗漏的点，请提 [Issue](https://github.com/yikeke/zh-style-guide/issues/new "点击前往 GitHub")。
 
@@ -24,7 +24,7 @@
 
 ## 使用原则
 
-本指南为查询手册性质，建议初次阅读本指南时，先大致浏览目录章节结构，了解本指南涵盖的内容范围。之后实际编写文档时碰到相应问题时，再回来查找相应规范。
+本指南是一本查询手册，建议初次阅读本指南时，先大致浏览目录章节结构，了解本指南涵盖的内容范围；之后就编写文档时碰到的实际问题，再回头查找相应规范。
 
 ## 用词说明
 
