--- a/source/语言风格/对话式.md
+++ b/source/语言风格/对话式.md
@@ -1,8 +1,8 @@
 ## 对话式
 
-技术文档的语气应该平易近人，多使用对话式。技术文档本身就常常枯燥难懂，过于正式就更是无聊乏味。
+技术文档的语气应该平易近人、直截了当，推荐使用对话式，例如「你可以……」。技术文档的内容本身常常枯燥难懂，如果还采用过于正式的语言形式，就更是无聊乏味。
 
-写文档，要使用对话式的语气，并不意味就像日常说话那样。反而，一般来说，口语常常冗长啰嗦、缺乏逻辑，在编写技术文档时应极力避免。
+文档中采用对话式的语气，并不意味就像日常说话那样。反而，口语常常冗长啰嗦、缺乏逻辑，在编写技术文档时应极力避免。
 
 ### 案例
 
