--- a/source/语言风格/对话式.md
+++ b/source/语言风格/对话式.md
@@ -1,8 +1,8 @@
 ## 对话式
 
-技术文档中应使用对话式的、平易近人的语气。由于技术文档传达的技术信息本身已经较为枯燥难懂，因此不建议使用过于正式、无聊乏味的语气。
+技术文档的语气应该平易近人、直截了当，推荐使用对话式，例如「你可以……」。技术文档的内容本身常常枯燥难懂，如果还采用过于正式的语言形式，就更是无聊乏味。
 
-使用对话式的语气并不意味着完全用日常说话的方式来写文档。一般而言，口语存在冗长啰嗦、缺乏逻辑性的倾向，在编写技术文档时应极力避免该问题。
+文档中采用对话式的语气，并不意味就像日常说话那样。反而，口语常常冗长啰嗦、缺乏逻辑，在编写技术文档时应极力避免。
 
 ### 案例
 
