fix 名称使用.md (#39)
* fix 名称使用.md

* Apply suggestions from code review

Co-authored-by: Coco Yee <40977455+yikeke@users.noreply.github.com>

--- a/source/名称与命名/名称使用.md
+++ b/source/名称与命名/名称使用.md
@@ -6,9 +6,9 @@
 
 中文文档中指称国外公司、品牌或产品名称时，建议遵循以下规范：
 
-- 对于**中文读者熟知**的公司、品牌或产品名称，只需用**中文**指称
+- 对于**中文读者熟知其中文官方译名**的公司、品牌或产品名称，只需用**中文官方译名**指称
 - 对于**中文读者不熟悉、但有中文官方译名**的公司、品牌或产品名称，建议用“**中文官方译名 (英文官方名称)**”形式
-- 对于**中文读者不熟悉、或者无中文官方译名**的公司、品牌或产品名称，建议直接用**英文**指称，且必须使用**正确的大小写**形式
+- 对于**无中文官方译名**的公司、品牌或产品名称，建议直接用**英文**指称，且必须使用**正确的大小写**形式
 
     - 【错误示例】mysql、github、tiktok、wechat
     - 【正确示例】MySQL、GitHub、TikTok、WeChat
@@ -24,7 +24,7 @@
 
 > 下表待补充，欢迎贡献！
 
-|中文读者熟知|中文读者不熟悉、但有中文官方译名|中文读者不熟悉、或者无中文官方译名|
+|中文读者熟知中文官方译名|中文读者不熟悉、但有中文官方译名|无中文官方译名|
 |---|---|---|
 |微软|威睿 (VMware)|GitHub|
 |苹果|塔多思 (Trados)|SDL|
