--- a/source/参考资料.md
+++ b/source/参考资料.md
@@ -39,7 +39,7 @@
 
 标点符号：
 
-- 《标点符号用法》GB/T 15834—2011
+- [《标点符号用法》GB/T 15834—2011](http://openstd.samr.gov.cn/bzgk/gb/newGbInfo?hcno=22EA6D162E4110E752259661E1A0D0A8)
 - 《夹用英文的中文文本的标点符号用法（草案）》
 - [易混标点符号：一字线（—）、短横线（-）、浪纹线（～）](https://zhuanlan.zhihu.com/p/87950176)
 
