--- a/source/文档内容元素/列表.md
+++ b/source/文档内容元素/列表.md
@@ -41,7 +41,7 @@
 | 1. 并列列表项中建议使用相似的句子结构。    | SQL 查询优化器：  <br>   - 支持 eager aggregate <br> - 更详细的 explain 信息 <br> - union 算子并行化 <br> - 子查询性能优化 <br> - 优化 CBO 框架 | SQL 查询优化器：  <br>   - 支持 eager aggregate <br> - 支持更详细的 explain 信息 <br> - 支持 union 算子并行化 <br> - 优化了子查询性能 <br> - 优化了 CBO 框架 |
 | 2. 每一项的长度要尽量接近。   | 在 GitHub 上提交的新 Issue 分为以下几种：  <br>   - 如果您发现了 bug 需要报告 <br> - 请求开发一项新功能 <br> - 常规问题 <br> - 为解决或提升性能提的 Issue | 在 GitHub 上提交的新 Issue 分为以下几种：  <br>   - 错误报告 <br> - 功能请求 <br> - 常规问题 <br> - 性能问题 | 
 | 3. 避免在每一项开头重复相同的词语。 | TiDB 与 MySQL 安全特性的差异： <br>  - 不支持外部身份验证方式。 <br> - 不支持列级别权限设置。 <br> - 不支持使用证书验证身份。 | 相较于 MySQL 安全特性，TiDB 不支持的功能有如下几种：  <br>   - 外部身份验证方式 <br> - 列级别权限设置 <br> - 证书验证身份方式 |
-| 4. 使用清晰的、描述性的句子或短语来引出列表。  | 状态可以通过 store 的 state_name 来确定：  <br>   - Up：这个 store 正常服务 <br> - Disconnected：当前没有检测到这个 store 的心跳，可能是故障或网络连接中断 <br> - Down：超过一小时没有收到 store 心跳，此时 PD 会为这个 store 上的数据添加副本 | 你可以通过 store 的 state_name 确定其状态：  <br>   - Up：这个 store 正常服务 <br> - Disconnected：当前没有检测到这个 store 的心跳，可能是故障或网络连接中断 <br> - Down：超过一小时没有收到 store 心跳，此时 PD 会为这个 store 上的数据添加副本 |
+| 4. 使用清晰的、描述性的句子或短语来引出列表。  | 状态可以通过 store 的 state_name 来确定：  <br>   - Up: 这个 store 正常服务 <br> - Disconnected: 当前没有检测到这个 store 的心跳，可能是故障或网络连接中断 <br> - Down: 超过一小时没有收到 store 心跳，此时 PD 会为这个 store 上的数据添加副本 | 你可以通过 store 的 state_name 确定其状态：  <br>   - Up: 这个 store 正常服务 <br> - Disconnected: 当前没有检测到这个 store 的心跳，可能是故障或网络连接中断 <br> - Down: 超过一小时没有收到 store 心跳，此时 PD 会为这个 store 上的数据添加副本 |
 | 5. 并列列表项中保持标点符号一致。  <br> 若列表项是句子，那么每一项建议以句号结尾；  <br>   若列表项是词组，则不建议以任何标点结尾； <br> 若列表项既有词组又有句子，则建议统一以句号结尾。 | 【例一】TiDB Binlog 支持以下功能场景： <br>  - 数据同步。 <br>  - 实时备份和恢复。 <br> <br> 【例二】指定数据源的相关信息： <br> - 在 Name 处，为数据源指定一个名称。<br> - 在 Type 处，选择 Prometheus。 <br>  - 在 URL 处，指定 Prometheus 的 IP 地址。 <br> - 其他字段 | 【例一】TiDB Binlog 支持以下功能场景： <br>  - 数据同步 <br>  - 实时备份和恢复 <br> <br> 【例二】指定数据源的相关信息： <br> - 在 Name 处，为数据源指定一个名称。<br> - 在 Type 处，选择 Prometheus。 <br>  - 在 URL 处，指定 Prometheus 的 IP 地址。 <br> - 其他字段。  |
 | 6. 不要滥用无序列表，否则会导致它们失去应有的效果。          | 无                | 无               |
 | 7. 避免嵌套使用列表，这样通常会显得冗长复杂。     如果一定要表现多层级的列表，建议最多不超过 3 级，且每一级都要用不同样式的小圆点。 | 无           | 无                     |
