--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -74,7 +74,7 @@
 
 ### 引号
 
-引号分为直角引号和弯引号。直角引号为「」，弯引号有双引号和单引号两种形式。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
+引号分为直角引号和弯引号，有双引号和单引号两种形式。直角引号为「『』」，弯引号为“‘’”。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
 
 本节只讨论弯引号使用的一些规范，下文中使用的“引号”均表示“弯引号”。
 
@@ -95,7 +95,7 @@
 
 ### 括号
 
-括号的常用形式包括圆括号“()”、方括号“[ ]”、方头括号“【】”、尖括号“<>”（也称单书名号）以及花括号“{}”。其中技术文档中常用的是圆括号、方括号以及尖括号。
+括号的常用形式包括圆括号“（）”、方括号“［］”、方头括号“【】”、尖括号“<>”以及花括号“｛｝”。其中技术文档中常用的是圆括号、方括号以及尖括号。
 
 中文文档中一个词语或句子后紧跟的注释性文字，用圆括号进行注解。注释句子里某些词语时，圆括号放在被注释词语之后；注释整个句子时，圆括号放在句末标点之后。
 
@@ -104,12 +104,12 @@
 
 一般来说，方括号和尖括号在技术文档中有以下几种特定用法。
 
-- 方括号“[ ]”表示窗口名、菜单名等，如“弹出[新建任务]窗口”、“[显示/外观/全屏]多级菜单”。
+- 方括号“［］”表示窗口名、菜单名等，如“弹出［新建任务］窗口”、“［显示/外观/全屏］多级菜单”。
 - 带尖括号“< >”表示按钮名、键名等，如“点击<取消>按钮”、“`<Tab>` 表示制表键”。
 
 ### 书名号
 
-书名号的形式为“《》”。书籍名、报刊名等名称需要用书名号标示。英文手册名称用中文双引号或斜体表示，不用书名号标示。
+书名号的形式为“《》”（双书名号）、“〈〉”（单书名号）。书籍名、报刊名等名称需要用书名号标示。英文手册名称用中文双引号或斜体表示，不用书名号标示。
 
 - 【示例一】《小王子》这本书有很多种语言版本。
 - 【示例二】详情见“TiDB-Lightning 表库过滤”一文。
@@ -146,17 +146,17 @@
 
 ### 省略号
 
-中文省略号的形式为“……”，有六个小圆点，占两个汉字的宽度。一般而言，中文语境中禁止使用英文省略号，即三个小圆点“…”（占一个汉字的宽度），必须使用六个小圆点“……”。
+中文省略号的形式为“……”或“⋯⋯”，有六个小圆点，占两个汉字的宽度。一般而言，中文语境中禁止使用英文省略号，即三个小圆点“…”（占一个汉字的宽度），必须使用六个小圆点“⋯⋯”。
 
 省略号主要在以下两种场景中使用。
 
 - 引文的省略，用省略号标明。
 
-    【示例】中文写作规范中要求：“句号常用于陈述句末尾的停顿。在产品资料中常用于简单句和复合句的结尾，表示句子意思已完整……”
+    【示例】中文写作规范中要求：“句号常用于陈述句末尾的停顿。在产品资料中常用于简单句和复合句的结尾，表示句子意思已完整⋯⋯”
 
 - 列举的省略，用省略号标明。
 
-    【示例】分支选择支持所有类型的分区表，无论是 range 分区或是 hash 分区等。对于 hash 分区，如果没有指定分区名，会自动使用 `p0`、`p1`、`p2`、……、或 `pN-1` 作为分区名。
+    【示例】分支选择支持所有类型的分区表，无论是 range 分区或是 hash 分区等。对于 hash 分区，如果没有指定分区名，会自动使用 `p0`、`p1`、`p2`、⋯⋯、或 `pN-1` 作为分区名。
 
 ### 感叹号
 
@@ -167,7 +167,7 @@
 
 ### 斜杠与反斜杠
 
-斜杠（slash 或 forward slash）的符号是“/”，表示分隔符。反斜杠 (backslash) 的符号是“\”，表示转义字符。反斜杠一般只出现在代码中，因此本节主要讨论斜杠的使用。
+斜杠（slash 或 forward slash）的符号是“/”（半角）或“／”（全角），表示分隔符。反斜杠 (backslash) 的符号是“\”，表示转义字符。反斜杠一般只出现在代码中，因此本节主要讨论斜杠的使用。
 
 斜杠有如下几种用法。
 
