--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -74,7 +74,7 @@
 
 ### 引号
 
-引号分为直角引号和弯引号，有双引号和单引号两种形式。直角引号为「『』」，弯引号为“‘’”。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
+引号分为直角引号和弯引号，有双引号和单引号两种形式。直角引号为“「」”或者“『』”，弯引号为‘’或者“”。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
 
 本节只讨论弯引号使用的一些规范，下文中使用的“引号”均表示“弯引号”。
 
@@ -146,7 +146,7 @@
 
 ### 省略号
 
-中文省略号的形式为“……”或“⋯⋯”，有六个小圆点，占两个汉字的宽度。一般而言，中文语境中禁止使用英文省略号，即三个小圆点“…”（占一个汉字的宽度），必须使用六个小圆点“⋯⋯”。
+中文省略号的形式为“……”或“⋯⋯”，有六个小圆点，占两个汉字的宽度。一般而言，中文语境中禁止使用英文省略号，即三个小圆点“…”（占一个汉字的宽度），必须使用六个小圆点“……”或“⋯⋯”。
 
 省略号主要在以下两种场景中使用。
 
