--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -74,9 +74,7 @@
 
 ### 引号
 
-引号分为直角引号和弯引号，有双引号和单引号两种形式。直角引号为“「」”或者“『』”，弯引号为‘’或者“”。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
-
-本节只讨论弯引号使用的一些规范，下文中使用的“引号”均表示“弯引号”。
+引号为单引号（‘’）或者双引号（“”）。
 
 - 引号内套用引号时，外面一层用双引号，里面一层用单引号。
 - 技术文档出现报错信息、特定操作或名称、缩略语提示、特殊名词、引用文档的节选等时，建议使用引号。
@@ -173,7 +171,7 @@
 
 - 表示除法，如 120/60 = 2
 - 表示单位（除法的变形），如 60 km/h
-- 表示“或”，如他/她。注意：如果需要表示多个并列项，不建议使用“/”连接，建议使用顿号连接。
+- 表示“或”与“和”，如他/她。注意：如果需要表示多个并列项，不建议使用“/”连接，建议使用顿号连接。
     - 【错误示例】高可用是 TiDB 的另一大特点，TiDB/TiKV/PD 这三个组件都能容忍部分实例失效，不影响整个集群的可用性。
     - 【正确示例】高可用是 TiDB 的另一大特点，TiDB、TiKV 和 PD 这三个组件都能容忍部分实例失效，不影响整个集群的可用性。
 
