--- a/source/语言风格/用词恰当.md
+++ b/source/语言风格/用词恰当.md
@@ -72,3 +72,7 @@
    - 【正确示例】假如尚未安装这个软件，
 
 【注意】汉语中使用**被字句**跟英语中使用**被动式**的含义是不同的。在英语中，使用被动式的目的是为了避免提及施事者，但在汉语中的被字句往往带有被动的负面含义。另外，在中文文档中使用主动语态能帮助**明确句子主语和宾语**，这对后续的技术翻译工作极为重要。
+
+### 易用错的词
+
+参考[易用错的词](../语言风格/易用错的词.md)。
