保留直角引号的说明

--- a/source/标点符号/常用中文标点符号.md
+++ b/source/标点符号/常用中文标点符号.md
@@ -74,7 +74,11 @@
 
 ### 引号
 
-引号为单引号（‘’）或者双引号（“”）。
+引号分为直角引号和弯引号，有双引号和单引号两种形式。直角引号为“「」”或者“『』”，弯引号为‘’或者“”。一般而言，技术文档中可以使用直角引号或弯引号，但**必须保证所有文档的统一，禁止混用**。
+
+值得注意的是，根据中国大陆[国家标准 GB/T 15834-2011](http://www.moe.gov.cn/ewebeditor/uploadfile/2015/01/13/20150113091548267.pdf) 的规定，引号应使用弯引号，包括单引号（''）和双引号（""）。
+
+因此，本节将专门讨论弯引号的使用规范，文中提到的"引号"均指"弯引号"。
 
 - 引号内套用引号时，外面一层用双引号，里面一层用单引号。
 - 技术文档出现报错信息、特定操作或名称、缩略语提示、特殊名词、引用文档的节选等时，建议使用引号。
