改成相对链接

--- a/source/文档结构样式/目录.md
+++ b/source/文档结构样式/目录.md
@@ -12,6 +12,6 @@
 
 注意：
 
-在实际操作中，文档右侧导航栏能显示哪些[标题层级](https://zh-style-guide.readthedocs.io/zh_CN/latest/标题.html#id2)，由使用的文档框架决定。例如 [Docusaurus 框架](https://docusaurus.io/docs/en/navigation)，虽然正文中对标题级别没有限制，但在右侧导航栏只支持显示二级标题 (##) 和三级标题 (###)，一级标题 (#) 和四级标题 (####) 不会出现在右侧导航栏中。
+在实际操作中，文档右侧导航栏能显示哪些[标题层级](../文档结构样式/标题.md#标题的层级)，由使用的文档框架决定。例如 [Docusaurus 框架](https://docusaurus.io/docs/en/navigation)，虽然正文中对标题级别没有限制，但在右侧导航栏只支持显示二级标题 (##) 和三级标题 (###)，一级标题 (#) 和四级标题 (####) 不会出现在右侧导航栏中。
 
 因此，建议各公司**根据使用的文档框架自定义文档的标题层级**，如果右侧导航栏无法显示一级标题 (#)，则可以自定义文档中的一级标题为 ##，二级标题为 ###，以此类推。
